--- a/src/pages/en/about.astro
+++ b/src/pages/en/about.astro
@@ -21,5 +21,7 @@ import Heading from '../../components/about/Heading.astro';
     />
     <ValuesEng />
     <TeamEng />
-    <Footer />
+    <Footer
+        description="Sambataro Arquitectos, an architecture firm with over 40 years of experience in scenotechnical consulting and stage machinery for preventive and corrective maintenance."
+    />
 </Layout>
