--- a/src/pages/en/contact.astro
+++ b/src/pages/en/contact.astro
@@ -12,5 +12,7 @@ import Heading from '../../components/about/Heading.astro';
     <Heading title="Contact" subtitle="Contact us for more information" />
     <ContactInfo />
     <ContactFormEng />
-    <Footer />
+    <Footer
+        description="Sambataro Arquitectos, an architecture firm with over 40 years of experience in scenotechnical consulting and stage machinery for preventive and corrective maintenance."
+    />
 </Layout>
