--- a/src/pages/en/projects/air/domingo.astro
+++ b/src/pages/en/projects/air/domingo.astro
@@ -1,13 +1,13 @@
 ---
+import domingo from '../../../../img/projects/domingo.webp';
 import ProjectPage from '../../../../components/ProjectPage.astro';
-import domingo from '../../../img/projects/domingo.webp';
 import Base from '../../../../layouts/Base.astro';
 import Layout from '../../../../layouts/Layout.astro';
 
-import domingo1 from '../../../img/projects/domingo/domingo1.webp';
-import domingo2 from '../../../img/projects/domingo/domingo2.webp';
-import domingo3 from '../../../img/projects/domingo/domingo3.webp';
-import domingo4 from '../../../img/projects/domingo/domingo4.webp';
+import domingo1 from '../../../../img/projects/domingo/domingo1.webp';
+import domingo2 from '../../../../img/projects/domingo/domingo2.webp';
+import domingo3 from '../../../../img/projects/domingo/domingo3.webp';
+import domingo4 from '../../../../img/projects/domingo/domingo4.webp';
 
 const datosTecnicos = [
     { label: 'Tipología', value: 'Escenarios y Producciones al Aire libre' },
