--- a/src/pages/en/projects/air/gracias.astro
+++ b/src/pages/en/projects/air/gracias.astro
@@ -1,14 +1,14 @@
 ---
+import gracias from '../../../../img/projects/gracias.webp';
 import ProjectPage from '../../../../components/ProjectPage.astro';
-import gracias from '../../../img/projects/gracias.webp';
 import Base from '../../../../layouts/Base.astro';
 import Layout from '../../../../layouts/Layout.astro';
 
-import gracias1 from '../../../img/projects/gracias/gracias1.webp';
-import gracias2 from '../../../img/projects/gracias/gracias2.webp';
-import gracias3 from '../../../img/projects/gracias/gracias3.webp';
-import gracias4 from '../../../img/projects/gracias/gracias4.webp';
-import gracias5 from '../../../img/projects/gracias/gracias5.webp';
+import gracias1 from '../../../../img/projects/gracias/gracias1.webp';
+import gracias2 from '../../../../img/projects/gracias/gracias2.webp';
+import gracias3 from '../../../../img/projects/gracias/gracias3.webp';
+import gracias4 from '../../../../img/projects/gracias/gracias4.webp';
+import gracias5 from '../../../../img/projects/gracias/gracias5.webp';
 
 const datosTecnicos = [
     { label: 'Tipología', value: 'Escenarios y Producciones al Aire libre' },
