--- a/src/pages/en/projects/air/luthiers.astro
+++ b/src/pages/en/projects/air/luthiers.astro
@@ -1,11 +1,11 @@
 ---
+import luthiers from '../../../../img/projects/luthiers.webp';
 import ProjectPage from '../../../../components/ProjectPage.astro';
-import luthiers from '../../../img/projects/luthiers.webp';
 import Base from '../../../../layouts/Base.astro';
 import Layout from '../../../../layouts/Layout.astro';
 
-import luthiers1 from '../../../img/projects/luthiers/luthiers1.webp';
-import luthiers2 from '../../../img/projects/luthiers/luthiers2.webp';
+import luthiers1 from '../../../../img/projects/luthiers/luthiers1.webp';
+import luthiers2 from '../../../../img/projects/luthiers/luthiers2.webp';
 
 const datosTecnicos = [
     { label: 'Tipología', value: 'Escenarios y Producciones al Aire libre' },
