--- a/src/pages/en/projects/air/orquesta.astro
+++ b/src/pages/en/projects/air/orquesta.astro
@@ -1,27 +1,27 @@
 ---
-import orquesta from '../../../img/projects/orquesta.webp';
+import orquesta from '../../../../img/projects/orquesta.webp';
 import ProjectPage from '../../../../components/ProjectPage.astro';
 import Base from '../../../../layouts/Base.astro';
 import Layout from '../../../../layouts/Layout.astro';
 
-import orquesta1 from '../../../img/projects/orquesta/orquesta1.webp';
-import orquesta2 from '../../../img/projects/orquesta/orquesta2.webp';
-import orquesta3 from '../../../img/projects/orquesta/orquesta3.webp';
-import orquesta4 from '../../../img/projects/orquesta/orquesta4.webp';
-import orquesta5 from '../../../img/projects/orquesta/orquesta5.webp';
-import orquesta6 from '../../../img/projects/orquesta/orquesta6.webp';
-import orquesta7 from '../../../img/projects/orquesta/orquesta7.webp';
-import orquesta8 from '../../../img/projects/orquesta/orquesta8.webp';
-import orquesta9 from '../../../img/projects/orquesta/orquesta9.webp';
-import orquesta10 from '../../../img/projects/orquesta/orquesta10.webp';
-import orquesta11 from '../../../img/projects/orquesta/orquesta11.webp';
-import orquesta12 from '../../../img/projects/orquesta/orquesta12.webp';
-import orquesta13 from '../../../img/projects/orquesta/orquesta13.webp';
-import orquesta14 from '../../../img/projects/orquesta/orquesta14.webp';
-import orquesta15 from '../../../img/projects/orquesta/orquesta15.webp';
-import orquesta16 from '../../../img/projects/orquesta/orquesta16.webp';
-import orquesta17 from '../../../img/projects/orquesta/orquesta17.webp';
-import orquesta18 from '../../../img/projects/orquesta/orquesta18.webp';
+import orquesta1 from '../../../../img/projects/orquesta/orquesta1.webp';
+import orquesta2 from '../../../../img/projects/orquesta/orquesta2.webp';
+import orquesta3 from '../../../../img/projects/orquesta/orquesta3.webp';
+import orquesta4 from '../../../../img/projects/orquesta/orquesta4.webp';
+import orquesta5 from '../../../../img/projects/orquesta/orquesta5.webp';
+import orquesta6 from '../../../../img/projects/orquesta/orquesta6.webp';
+import orquesta7 from '../../../../img/projects/orquesta/orquesta7.webp';
+import orquesta8 from '../../../../img/projects/orquesta/orquesta8.webp';
+import orquesta9 from '../../../../img/projects/orquesta/orquesta9.webp';
+import orquesta10 from '../../../../img/projects/orquesta/orquesta10.webp';
+import orquesta11 from '../../../../img/projects/orquesta/orquesta11.webp';
+import orquesta12 from '../../../../img/projects/orquesta/orquesta12.webp';
+import orquesta13 from '../../../../img/projects/orquesta/orquesta13.webp';
+import orquesta14 from '../../../../img/projects/orquesta/orquesta14.webp';
+import orquesta15 from '../../../../img/projects/orquesta/orquesta15.webp';
+import orquesta16 from '../../../../img/projects/orquesta/orquesta16.webp';
+import orquesta17 from '../../../../img/projects/orquesta/orquesta17.webp';
+import orquesta18 from '../../../../img/projects/orquesta/orquesta18.webp';
 
 const datosTecnicos = [
     { label: 'Tipología', value: 'Escenarios y Producciones al Aire libre' },
