--- a/src/pages/en/projects/buildings/ballet-santiago.astro
+++ b/src/pages/en/projects/buildings/ballet-santiago.astro
@@ -1,29 +1,29 @@
 ---
-import ballet from '../../../img/projects/ballet.webp';
+import ballet from '../../../../img/projects/ballet.webp';
 import ProjectPage from '../../../../components/ProjectPage.astro';
 import Base from '../../../../layouts/Base.astro';
 import Layout from '../../../../layouts/Layout.astro';
 
-import ballet1 from '../../../img/projects/ballet/ballet1.webp';
-import ballet2 from '../../../img/projects/ballet/ballet2.webp';
-import ballet3 from '../../../img/projects/ballet/ballet3.webp';
-import ballet4 from '../../../img/projects/ballet/ballet4.webp';
-import ballet5 from '../../../img/projects/ballet/ballet5.webp';
-import ballet6 from '../../../img/projects/ballet/ballet6.webp';
-import ballet7 from '../../../img/projects/ballet/ballet7.webp';
-import ballet8 from '../../../img/projects/ballet/ballet8.webp';
-import ballet9 from '../../../img/projects/ballet/ballet9.webp';
-import ballet10 from '../../../img/projects/ballet/ballet10.webp';
-import ballet11 from '../../../img/projects/ballet/ballet11.webp';
-import ballet12 from '../../../img/projects/ballet/ballet12.webp';
-import ballet13 from '../../../img/projects/ballet/ballet13.webp';
-import ballet14 from '../../../img/projects/ballet/ballet14.webp';
-import ballet15 from '../../../img/projects/ballet/ballet15.webp';
-import ballet16 from '../../../img/projects/ballet/ballet16.webp';
-import ballet17 from '../../../img/projects/ballet/ballet17.webp';
-import ballet18 from '../../../img/projects/ballet/ballet18.webp';
-import ballet19 from '../../../img/projects/ballet/ballet19.webp';
-import ballet20 from '../../../img/projects/ballet/ballet20.webp';
+import ballet1 from '../../../../img/projects/ballet/ballet1.webp';
+import ballet2 from '../../../../img/projects/ballet/ballet2.webp';
+import ballet3 from '../../../../img/projects/ballet/ballet3.webp';
+import ballet4 from '../../../../img/projects/ballet/ballet4.webp';
+import ballet5 from '../../../../img/projects/ballet/ballet5.webp';
+import ballet6 from '../../../../img/projects/ballet/ballet6.webp';
+import ballet7 from '../../../../img/projects/ballet/ballet7.webp';
+import ballet8 from '../../../../img/projects/ballet/ballet8.webp';
+import ballet9 from '../../../../img/projects/ballet/ballet9.webp';
+import ballet10 from '../../../../img/projects/ballet/ballet10.webp';
+import ballet11 from '../../../../img/projects/ballet/ballet11.webp';
+import ballet12 from '../../../../img/projects/ballet/ballet12.webp';
+import ballet13 from '../../../../img/projects/ballet/ballet13.webp';
+import ballet14 from '../../../../img/projects/ballet/ballet14.webp';
+import ballet15 from '../../../../img/projects/ballet/ballet15.webp';
+import ballet16 from '../../../../img/projects/ballet/ballet16.webp';
+import ballet17 from '../../../../img/projects/ballet/ballet17.webp';
+import ballet18 from '../../../../img/projects/ballet/ballet18.webp';
+import ballet19 from '../../../../img/projects/ballet/ballet19.webp';
+import ballet20 from '../../../../img/projects/ballet/ballet20.webp';
 
 const datosTecnicos = [
     { label: 'Tipología', value: 'Edificio complementario' },
