--- a/src/pages/en/projects/buildings/teatro-municipal.astro
+++ b/src/pages/en/projects/buildings/teatro-municipal.astro
@@ -1,24 +1,24 @@
 ---
-import municipal from '../../../img/projects/municipal.webp';
+import municipal from '../../../../img/projects/municipal.webp';
 import ProjectPage from '../../../../components/ProjectPage.astro';
 import Base from '../../../../layouts/Base.astro';
 import Layout from '../../../../layouts/Layout.astro';
 
-import municipal1 from '../../../img/projects/municipal/municipal1.webp';
-import municipal2 from '../../../img/projects/municipal/municipal2.webp';
-import municipal3 from '../../../img/projects/municipal/municipal3.webp';
-import municipal4 from '../../../img/projects/municipal/municipal4.webp';
-import municipal5 from '../../../img/projects/municipal/municipal5.webp';
-import municipal6 from '../../../img/projects/municipal/municipal6.webp';
-import municipal7 from '../../../img/projects/municipal/municipal7.webp';
-import municipal8 from '../../../img/projects/municipal/municipal8.webp';
-import municipal9 from '../../../img/projects/municipal/municipal9.webp';
-import municipal10 from '../../../img/projects/municipal/municipal10.webp';
-import municipal11 from '../../../img/projects/municipal/municipal11.webp';
-import municipal12 from '../../../img/projects/municipal/municipal12.webp';
-import municipal13 from '../../../img/projects/municipal/municipal13.webp';
-import municipal14 from '../../../img/projects/municipal/municipal14.webp';
-import municipal15 from '../../../img/projects/municipal/municipal15.webp';
+import municipal1 from '../../../../img/projects/municipal/municipal1.webp';
+import municipal2 from '../../../../img/projects/municipal/municipal2.webp';
+import municipal3 from '../../../../img/projects/municipal/municipal3.webp';
+import municipal4 from '../../../../img/projects/municipal/municipal4.webp';
+import municipal5 from '../../../../img/projects/municipal/municipal5.webp';
+import municipal6 from '../../../../img/projects/municipal/municipal6.webp';
+import municipal7 from '../../../../img/projects/municipal/municipal7.webp';
+import municipal8 from '../../../../img/projects/municipal/municipal8.webp';
+import municipal9 from '../../../../img/projects/municipal/municipal9.webp';
+import municipal10 from '../../../../img/projects/municipal/municipal10.webp';
+import municipal11 from '../../../../img/projects/municipal/municipal11.webp';
+import municipal12 from '../../../../img/projects/municipal/municipal12.webp';
+import municipal13 from '../../../../img/projects/municipal/municipal13.webp';
+import municipal14 from '../../../../img/projects/municipal/municipal14.webp';
+import municipal15 from '../../../../img/projects/municipal/municipal15.webp';
 
 const datosTecnicos = [
     { label: 'Tipología', value: 'Edificio Complementario' },
