--- a/src/pages/en/projects/centers/cultural-casas.astro
+++ b/src/pages/en/projects/centers/cultural-casas.astro
@@ -1,29 +1,29 @@
 ---
-import cultural from '../../../img/projects/cultural.webp';
+import cultural from '../../../../img/projects/cultural.webp';
 import ProjectPage from '../../../../components/ProjectPage.astro';
 import Base from '../../../../layouts/Base.astro';
 import Layout from '../../../../layouts/Layout.astro';
 
-import cultural1 from '../../../img/projects/cultural/cultural1.webp';
-import cultural2 from '../../../img/projects/cultural/cultural2.webp';
-import cultural3 from '../../../img/projects/cultural/cultural3.webp';
-import cultural4 from '../../../img/projects/cultural/cultural4.webp';
-import cultural5 from '../../../img/projects/cultural/cultural5.webp';
-import cultural6 from '../../../img/projects/cultural/cultural6.webp';
-import cultural7 from '../../../img/projects/cultural/cultural7.webp';
-import cultural8 from '../../../img/projects/cultural/cultural8.webp';
-import cultural9 from '../../../img/projects/cultural/cultural9.webp';
-import cultural10 from '../../../img/projects/cultural/cultural10.webp';
-import cultural11 from '../../../img/projects/cultural/cultural11.webp';
-import cultural12 from '../../../img/projects/cultural/cultural12.webp';
-import cultural13 from '../../../img/projects/cultural/cultural13.webp';
-import cultural14 from '../../../img/projects/cultural/cultural14.webp';
-import cultural15 from '../../../img/projects/cultural/cultural15.webp';
-import cultural16 from '../../../img/projects/cultural/cultural16.webp';
-import cultural17 from '../../../img/projects/cultural/cultural17.webp';
-import cultural18 from '../../../img/projects/cultural/cultural18.webp';
-import cultural19 from '../../../img/projects/cultural/cultural19.webp';
-import cultural20 from '../../../img/projects/cultural/cultural20.webp';
+import cultural1 from '../../../../img/projects/cultural/cultural1.webp';
+import cultural2 from '../../../../img/projects/cultural/cultural2.webp';
+import cultural3 from '../../../../img/projects/cultural/cultural3.webp';
+import cultural4 from '../../../../img/projects/cultural/cultural4.webp';
+import cultural5 from '../../../../img/projects/cultural/cultural5.webp';
+import cultural6 from '../../../../img/projects/cultural/cultural6.webp';
+import cultural7 from '../../../../img/projects/cultural/cultural7.webp';
+import cultural8 from '../../../../img/projects/cultural/cultural8.webp';
+import cultural9 from '../../../../img/projects/cultural/cultural9.webp';
+import cultural10 from '../../../../img/projects/cultural/cultural10.webp';
+import cultural11 from '../../../../img/projects/cultural/cultural11.webp';
+import cultural12 from '../../../../img/projects/cultural/cultural12.webp';
+import cultural13 from '../../../../img/projects/cultural/cultural13.webp';
+import cultural14 from '../../../../img/projects/cultural/cultural14.webp';
+import cultural15 from '../../../../img/projects/cultural/cultural15.webp';
+import cultural16 from '../../../../img/projects/cultural/cultural16.webp';
+import cultural17 from '../../../../img/projects/cultural/cultural17.webp';
+import cultural18 from '../../../../img/projects/cultural/cultural18.webp';
+import cultural19 from '../../../../img/projects/cultural/cultural19.webp';
+import cultural20 from '../../../../img/projects/cultural/cultural20.webp';
 
 const datosTecnicos = [
     { label: 'Tipología', value: 'Centro Cultural' },
