--- a/src/pages/en/projects/centers/cultural-recoleta.astro
+++ b/src/pages/en/projects/centers/cultural-recoleta.astro
@@ -1,29 +1,29 @@
 ---
-import recoleta from '../../../img/projects/recoleta.webp';
+import recoleta from '../../../../img/projects/recoleta.webp';
 import ProjectPage from '../../../../components/ProjectPage.astro';
 import Base from '../../../../layouts/Base.astro';
 import Layout from '../../../../layouts/Layout.astro';
 
-import recoleta1 from '../../../img/projects/recoleta/recoleta1.webp';
-import recoleta2 from '../../../img/projects/recoleta/recoleta2.webp';
-import recoleta3 from '../../../img/projects/recoleta/recoleta3.webp';
-import recoleta4 from '../../../img/projects/recoleta/recoleta4.webp';
-import recoleta5 from '../../../img/projects/recoleta/recoleta5.webp';
-import recoleta6 from '../../../img/projects/recoleta/recoleta6.webp';
-import recoleta7 from '../../../img/projects/recoleta/recoleta7.webp';
-import recoleta8 from '../../../img/projects/recoleta/recoleta8.webp';
-import recoleta9 from '../../../img/projects/recoleta/recoleta9.webp';
-import recoleta10 from '../../../img/projects/recoleta/recoleta10.webp';
-import recoleta11 from '../../../img/projects/recoleta/recoleta11.webp';
-import recoleta12 from '../../../img/projects/recoleta/recoleta12.webp';
-import recoleta13 from '../../../img/projects/recoleta/recoleta13.webp';
-import recoleta14 from '../../../img/projects/recoleta/recoleta14.webp';
-import recoleta15 from '../../../img/projects/recoleta/recoleta15.webp';
-import recoleta16 from '../../../img/projects/recoleta/recoleta16.webp';
-import recoleta17 from '../../../img/projects/recoleta/recoleta17.webp';
-import recoleta18 from '../../../img/projects/recoleta/recoleta18.webp';
-import recoleta19 from '../../../img/projects/recoleta/recoleta19.webp';
-import recoleta20 from '../../../img/projects/recoleta/recoleta20.webp';
+import recoleta1 from '../../../../img/projects/recoleta/recoleta1.webp';
+import recoleta2 from '../../../../img/projects/recoleta/recoleta2.webp';
+import recoleta3 from '../../../../img/projects/recoleta/recoleta3.webp';
+import recoleta4 from '../../../../img/projects/recoleta/recoleta4.webp';
+import recoleta5 from '../../../../img/projects/recoleta/recoleta5.webp';
+import recoleta6 from '../../../../img/projects/recoleta/recoleta6.webp';
+import recoleta7 from '../../../../img/projects/recoleta/recoleta7.webp';
+import recoleta8 from '../../../../img/projects/recoleta/recoleta8.webp';
+import recoleta9 from '../../../../img/projects/recoleta/recoleta9.webp';
+import recoleta10 from '../../../../img/projects/recoleta/recoleta10.webp';
+import recoleta11 from '../../../../img/projects/recoleta/recoleta11.webp';
+import recoleta12 from '../../../../img/projects/recoleta/recoleta12.webp';
+import recoleta13 from '../../../../img/projects/recoleta/recoleta13.webp';
+import recoleta14 from '../../../../img/projects/recoleta/recoleta14.webp';
+import recoleta15 from '../../../../img/projects/recoleta/recoleta15.webp';
+import recoleta16 from '../../../../img/projects/recoleta/recoleta16.webp';
+import recoleta17 from '../../../../img/projects/recoleta/recoleta17.webp';
+import recoleta18 from '../../../../img/projects/recoleta/recoleta18.webp';
+import recoleta19 from '../../../../img/projects/recoleta/recoleta19.webp';
+import recoleta20 from '../../../../img/projects/recoleta/recoleta20.webp';
 
 const datosTecnicos = [
     { label: 'Tipología', value: 'Centro Cultural' },
