--- a/src/pages/en/projects/centers/gabriela-mistral.astro
+++ b/src/pages/en/projects/centers/gabriela-mistral.astro
@@ -1,29 +1,29 @@
 ---
-import mistral from '../../../img/projects/mistral.webp';
+import mistral from '../../../../img/projects/mistral.webp';
 import ProjectPage from '../../../../components/ProjectPage.astro';
 import Base from '../../../../layouts/Base.astro';
 import Layout from '../../../../layouts/Layout.astro';
 
-import mistral1 from '../../../img/projects/mistral/mistral1.webp';
-import mistral2 from '../../../img/projects/mistral/mistral2.webp';
-import mistral3 from '../../../img/projects/mistral/mistral3.webp';
-import mistral4 from '../../../img/projects/mistral/mistral4.webp';
-import mistral5 from '../../../img/projects/mistral/mistral5.webp';
-import mistral6 from '../../../img/projects/mistral/mistral6.webp';
-import mistral7 from '../../../img/projects/mistral/mistral7.webp';
-import mistral8 from '../../../img/projects/mistral/mistral8.webp';
-import mistral9 from '../../../img/projects/mistral/mistral9.webp';
-import mistral10 from '../../../img/projects/mistral/mistral10.webp';
-import mistral11 from '../../../img/projects/mistral/mistral11.webp';
-import mistral12 from '../../../img/projects/mistral/mistral12.webp';
-import mistral13 from '../../../img/projects/mistral/mistral13.webp';
-import mistral14 from '../../../img/projects/mistral/mistral14.webp';
-import mistral15 from '../../../img/projects/mistral/mistral15.webp';
-import mistral16 from '../../../img/projects/mistral/mistral16.webp';
-import mistral17 from '../../../img/projects/mistral/mistral17.webp';
-import mistral18 from '../../../img/projects/mistral/mistral18.webp';
-import mistral19 from '../../../img/projects/mistral/mistral19.webp';
-import mistral20 from '../../../img/projects/mistral/mistral20.webp';
+import mistral1 from '../../../../img/projects/mistral/mistral1.webp';
+import mistral2 from '../../../../img/projects/mistral/mistral2.webp';
+import mistral3 from '../../../../img/projects/mistral/mistral3.webp';
+import mistral4 from '../../../../img/projects/mistral/mistral4.webp';
+import mistral5 from '../../../../img/projects/mistral/mistral5.webp';
+import mistral6 from '../../../../img/projects/mistral/mistral6.webp';
+import mistral7 from '../../../../img/projects/mistral/mistral7.webp';
+import mistral8 from '../../../../img/projects/mistral/mistral8.webp';
+import mistral9 from '../../../../img/projects/mistral/mistral9.webp';
+import mistral10 from '../../../../img/projects/mistral/mistral10.webp';
+import mistral11 from '../../../../img/projects/mistral/mistral11.webp';
+import mistral12 from '../../../../img/projects/mistral/mistral12.webp';
+import mistral13 from '../../../../img/projects/mistral/mistral13.webp';
+import mistral14 from '../../../../img/projects/mistral/mistral14.webp';
+import mistral15 from '../../../../img/projects/mistral/mistral15.webp';
+import mistral16 from '../../../../img/projects/mistral/mistral16.webp';
+import mistral17 from '../../../../img/projects/mistral/mistral17.webp';
+import mistral18 from '../../../../img/projects/mistral/mistral18.webp';
+import mistral19 from '../../../../img/projects/mistral/mistral19.webp';
+import mistral20 from '../../../../img/projects/mistral/mistral20.webp';
 
 const datosTecnicos = [
     { label: 'Tipología', value: 'Centro Cultural' },
