--- a/src/pages/en/projects/scenography/barbero.astro
+++ b/src/pages/en/projects/scenography/barbero.astro
@@ -1,20 +1,20 @@
 ---
-import barbero from '../../../img/projects/barbero.webp';
+import barbero from '../../../../img/projects/barbero.webp';
 import ProjectPage from '../../../../components/ProjectPage.astro';
 import Base from '../../../../layouts/Base.astro';
 import Layout from '../../../../layouts/Layout.astro';
 
-import barbero1 from '../../../img/projects/barbero/barbero1.webp';
-import barbero2 from '../../../img/projects/barbero/barbero2.webp';
-import barbero3 from '../../../img/projects/barbero/barbero3.webp';
-import barbero4 from '../../../img/projects/barbero/barbero4.webp';
-import barbero5 from '../../../img/projects/barbero/barbero5.webp';
-import barbero6 from '../../../img/projects/barbero/barbero6.webp';
-import barbero7 from '../../../img/projects/barbero/barbero7.webp';
-import barbero8 from '../../../img/projects/barbero/barbero8.webp';
-import barbero9 from '../../../img/projects/barbero/barbero9.webp';
-import barbero10 from '../../../img/projects/barbero/barbero10.webp';
-import barbero11 from '../../../img/projects/barbero/barbero11.webp';
+import barbero1 from '../../../../img/projects/barbero/barbero1.webp';
+import barbero2 from '../../../../img/projects/barbero/barbero2.webp';
+import barbero3 from '../../../../img/projects/barbero/barbero3.webp';
+import barbero4 from '../../../../img/projects/barbero/barbero4.webp';
+import barbero5 from '../../../../img/projects/barbero/barbero5.webp';
+import barbero6 from '../../../../img/projects/barbero/barbero6.webp';
+import barbero7 from '../../../../img/projects/barbero/barbero7.webp';
+import barbero8 from '../../../../img/projects/barbero/barbero8.webp';
+import barbero9 from '../../../../img/projects/barbero/barbero9.webp';
+import barbero10 from '../../../../img/projects/barbero/barbero10.webp';
+import barbero11 from '../../../../img/projects/barbero/barbero11.webp';
 
 const datosTecnicos = [
     { label: 'Tipología', value: 'Escenografías' },
