--- a/src/pages/en/projects/scenography/boheme.astro
+++ b/src/pages/en/projects/scenography/boheme.astro
@@ -1,27 +1,27 @@
 ---
-import boheme from '../../../img/projects/boheme.webp';
+import boheme from '../../../../img/projects/boheme.webp';
 import ProjectPage from '../../../../components/ProjectPage.astro';
 import Base from '../../../../layouts/Base.astro';
 import Layout from '../../../../layouts/Layout.astro';
 
-import boheme1 from '../../../img/projects/boheme/boheme1.webp';
-import boheme2 from '../../../img/projects/boheme/boheme2.webp';
-import boheme3 from '../../../img/projects/boheme/boheme3.webp';
-import boheme4 from '../../../img/projects/boheme/boheme4.webp';
-import boheme5 from '../../../img/projects/boheme/boheme5.webp';
-import boheme6 from '../../../img/projects/boheme/boheme6.webp';
-import boheme7 from '../../../img/projects/boheme/boheme7.webp';
-import boheme8 from '../../../img/projects/boheme/boheme8.webp';
-import boheme9 from '../../../img/projects/boheme/boheme9.webp';
-import boheme10 from '../../../img/projects/boheme/boheme10.webp';
-import boheme11 from '../../../img/projects/boheme/boheme11.webp';
-import boheme12 from '../../../img/projects/boheme/boheme12.webp';
-import boheme13 from '../../../img/projects/boheme/boheme13.webp';
-import boheme14 from '../../../img/projects/boheme/boheme14.webp';
-import boheme15 from '../../../img/projects/boheme/boheme15.webp';
-import boheme16 from '../../../img/projects/boheme/boheme16.webp';
-import boheme17 from '../../../img/projects/boheme/boheme17.webp';
-import boheme18 from '../../../img/projects/boheme/boheme18.webp';
+import boheme1 from '../../../../img/projects/boheme/boheme1.webp';
+import boheme2 from '../../../../img/projects/boheme/boheme2.webp';
+import boheme3 from '../../../../img/projects/boheme/boheme3.webp';
+import boheme4 from '../../../../img/projects/boheme/boheme4.webp';
+import boheme5 from '../../../../img/projects/boheme/boheme5.webp';
+import boheme6 from '../../../../img/projects/boheme/boheme6.webp';
+import boheme7 from '../../../../img/projects/boheme/boheme7.webp';
+import boheme8 from '../../../../img/projects/boheme/boheme8.webp';
+import boheme9 from '../../../../img/projects/boheme/boheme9.webp';
+import boheme10 from '../../../../img/projects/boheme/boheme10.webp';
+import boheme11 from '../../../../img/projects/boheme/boheme11.webp';
+import boheme12 from '../../../../img/projects/boheme/boheme12.webp';
+import boheme13 from '../../../../img/projects/boheme/boheme13.webp';
+import boheme14 from '../../../../img/projects/boheme/boheme14.webp';
+import boheme15 from '../../../../img/projects/boheme/boheme15.webp';
+import boheme16 from '../../../../img/projects/boheme/boheme16.webp';
+import boheme17 from '../../../../img/projects/boheme/boheme17.webp';
+import boheme18 from '../../../../img/projects/boheme/boheme18.webp';
 
 const datosTecnicos = [
     { label: 'Tipología', value: 'Escenografías' },
