--- a/src/pages/en/projects/scenography/boris.astro
+++ b/src/pages/en/projects/scenography/boris.astro
@@ -1,13 +1,13 @@
 ---
-import boris from '../../../img/projects/boris.webp';
+import boris from '../../../../img/projects/boris.webp';
 import ProjectPage from '../../../../components/ProjectPage.astro';
 import Base from '../../../../layouts/Base.astro';
 import Layout from '../../../../layouts/Layout.astro';
 
-import boris1 from '../../../img/projects/boris/boris1.webp';
-import boris2 from '../../../img/projects/boris/boris2.webp';
-import boris3 from '../../../img/projects/boris/boris3.webp';
-import boris4 from '../../../img/projects/boris/boris4.webp';
+import boris1 from '../../../../img/projects/boris/boris1.webp';
+import boris2 from '../../../../img/projects/boris/boris2.webp';
+import boris3 from '../../../../img/projects/boris/boris3.webp';
+import boris4 from '../../../../img/projects/boris/boris4.webp';
 
 const datosTecnicos = [
     { label: 'Tipología', value: 'Escenografías' },
