--- a/src/pages/en/projects/scenography/egitto.astro
+++ b/src/pages/en/projects/scenography/egitto.astro
@@ -1,29 +1,29 @@
 ---
-import egitto from '../../../img/projects/egitto.webp';
+import egitto from '../../../../img/projects/egitto.webp';
 import ProjectPage from '../../../../components/ProjectPage.astro';
 import Base from '../../../../layouts/Base.astro';
 import Layout from '../../../../layouts/Layout.astro';
 
-import egitto1 from '../../../img/projects/egitto/egitto1.webp';
-import egitto2 from '../../../img/projects/egitto/egitto2.webp';
-import egitto3 from '../../../img/projects/egitto/egitto3.webp';
-import egitto4 from '../../../img/projects/egitto/egitto4.webp';
-import egitto5 from '../../../img/projects/egitto/egitto5.webp';
-import egitto6 from '../../../img/projects/egitto/egitto6.webp';
-import egitto7 from '../../../img/projects/egitto/egitto7.webp';
-import egitto8 from '../../../img/projects/egitto/egitto8.webp';
-import egitto9 from '../../../img/projects/egitto/egitto9.webp';
-import egitto10 from '../../../img/projects/egitto/egitto10.webp';
-import egitto11 from '../../../img/projects/egitto/egitto11.webp';
-import egitto12 from '../../../img/projects/egitto/egitto12.webp';
-import egitto13 from '../../../img/projects/egitto/egitto13.webp';
-import egitto14 from '../../../img/projects/egitto/egitto14.webp';
-import egitto15 from '../../../img/projects/egitto/egitto15.webp';
-import egitto16 from '../../../img/projects/egitto/egitto16.webp';
-import egitto17 from '../../../img/projects/egitto/egitto17.webp';
-import egitto18 from '../../../img/projects/egitto/egitto18.webp';
-import egitto19 from '../../../img/projects/egitto/egitto19.webp';
-import egitto20 from '../../../img/projects/egitto/egitto20.webp';
+import egitto1 from '../../../../img/projects/egitto/egitto1.webp';
+import egitto2 from '../../../../img/projects/egitto/egitto2.webp';
+import egitto3 from '../../../../img/projects/egitto/egitto3.webp';
+import egitto4 from '../../../../img/projects/egitto/egitto4.webp';
+import egitto5 from '../../../../img/projects/egitto/egitto5.webp';
+import egitto6 from '../../../../img/projects/egitto/egitto6.webp';
+import egitto7 from '../../../../img/projects/egitto/egitto7.webp';
+import egitto8 from '../../../../img/projects/egitto/egitto8.webp';
+import egitto9 from '../../../../img/projects/egitto/egitto9.webp';
+import egitto10 from '../../../../img/projects/egitto/egitto10.webp';
+import egitto11 from '../../../../img/projects/egitto/egitto11.webp';
+import egitto12 from '../../../../img/projects/egitto/egitto12.webp';
+import egitto13 from '../../../../img/projects/egitto/egitto13.webp';
+import egitto14 from '../../../../img/projects/egitto/egitto14.webp';
+import egitto15 from '../../../../img/projects/egitto/egitto15.webp';
+import egitto16 from '../../../../img/projects/egitto/egitto16.webp';
+import egitto17 from '../../../../img/projects/egitto/egitto17.webp';
+import egitto18 from '../../../../img/projects/egitto/egitto18.webp';
+import egitto19 from '../../../../img/projects/egitto/egitto19.webp';
+import egitto20 from '../../../../img/projects/egitto/egitto20.webp';
 
 const datosTecnicos = [
     { label: 'Tipología', value: 'Escenografías' },
