--- a/src/pages/en/projects/scenography/ernani.astro
+++ b/src/pages/en/projects/scenography/ernani.astro
@@ -1,16 +1,16 @@
 ---
-import ernani from '../../../img/projects/ernani.webp';
+import ernani from '../../../../img/projects/ernani.webp';
 import ProjectPage from '../../../../components/ProjectPage.astro';
 import Base from '../../../../layouts/Base.astro';
 import Layout from '../../../../layouts/Layout.astro';
 
-import ernani1 from '../../../img/projects/ernani/ernani1.webp';
-import ernani2 from '../../../img/projects/ernani/ernani2.webp';
-import ernani3 from '../../../img/projects/ernani/ernani3.webp';
-import ernani4 from '../../../img/projects/ernani/ernani4.webp';
-import ernani5 from '../../../img/projects/ernani/ernani5.webp';
-import ernani6 from '../../../img/projects/ernani/ernani6.webp';
-import ernani7 from '../../../img/projects/ernani/ernani7.webp';
+import ernani1 from '../../../../img/projects/ernani/ernani1.webp';
+import ernani2 from '../../../../img/projects/ernani/ernani2.webp';
+import ernani3 from '../../../../img/projects/ernani/ernani3.webp';
+import ernani4 from '../../../../img/projects/ernani/ernani4.webp';
+import ernani5 from '../../../../img/projects/ernani/ernani5.webp';
+import ernani6 from '../../../../img/projects/ernani/ernani6.webp';
+import ernani7 from '../../../../img/projects/ernani/ernani7.webp';
 
 const datosTecnicos = [
     { label: 'Tipología', value: 'Escenografías' },
