--- a/src/pages/en/projects/scenography/giovanni.astro
+++ b/src/pages/en/projects/scenography/giovanni.astro
@@ -1,22 +1,22 @@
 ---
-import giovanni from '../../../img/projects/giovanni.webp';
+import giovanni from '../../../../img/projects/giovanni.webp';
 import ProjectPage from '../../../../components/ProjectPage.astro';
 import Base from '../../../../layouts/Base.astro';
 import Layout from '../../../../layouts/Layout.astro';
 
-import giovanni1 from '../../../img/projects/giovanni/giovanni1.webp';
-import giovanni2 from '../../../img/projects/giovanni/giovanni2.webp';
-import giovanni3 from '../../../img/projects/giovanni/giovanni3.webp';
-import giovanni4 from '../../../img/projects/giovanni/giovanni4.webp';
-import giovanni5 from '../../../img/projects/giovanni/giovanni5.webp';
-import giovanni6 from '../../../img/projects/giovanni/giovanni6.webp';
-import giovanni7 from '../../../img/projects/giovanni/giovanni7.webp';
-import giovanni8 from '../../../img/projects/giovanni/giovanni8.webp';
-import giovanni9 from '../../../img/projects/giovanni/giovanni9.webp';
-import giovanni10 from '../../../img/projects/giovanni/giovanni10.webp';
-import giovanni11 from '../../../img/projects/giovanni/giovanni11.webp';
-import giovanni12 from '../../../img/projects/giovanni/giovanni12.webp';
-import giovanni13 from '../../../img/projects/giovanni/giovanni13.webp';
+import giovanni1 from '../../../../img/projects/giovanni/giovanni1.webp';
+import giovanni2 from '../../../../img/projects/giovanni/giovanni2.webp';
+import giovanni3 from '../../../../img/projects/giovanni/giovanni3.webp';
+import giovanni4 from '../../../../img/projects/giovanni/giovanni4.webp';
+import giovanni5 from '../../../../img/projects/giovanni/giovanni5.webp';
+import giovanni6 from '../../../../img/projects/giovanni/giovanni6.webp';
+import giovanni7 from '../../../../img/projects/giovanni/giovanni7.webp';
+import giovanni8 from '../../../../img/projects/giovanni/giovanni8.webp';
+import giovanni9 from '../../../../img/projects/giovanni/giovanni9.webp';
+import giovanni10 from '../../../../img/projects/giovanni/giovanni10.webp';
+import giovanni11 from '../../../../img/projects/giovanni/giovanni11.webp';
+import giovanni12 from '../../../../img/projects/giovanni/giovanni12.webp';
+import giovanni13 from '../../../../img/projects/giovanni/giovanni13.webp';
 
 const datosTecnicos = [
     { label: 'Tipología', value: 'Escenografías' },
