--- a/src/pages/en/projects/scenography/hoffmann.astro
+++ b/src/pages/en/projects/scenography/hoffmann.astro
@@ -1,15 +1,15 @@
 ---
-import hoffmann from '../../../img/projects/hoffmann.webp';
+import hoffmann from '../../../../img/projects/hoffmann.webp';
 import ProjectPage from '../../../../components/ProjectPage.astro';
 import Base from '../../../../layouts/Base.astro';
 import Layout from '../../../../layouts/Layout.astro';
 
-import hoffmann1 from '../../../img/projects/hoffmann/hoffmann1.webp';
-import hoffmann2 from '../../../img/projects/hoffmann/hoffmann2.webp';
-import hoffmann3 from '../../../img/projects/hoffmann/hoffmann3.webp';
-import hoffmann4 from '../../../img/projects/hoffmann/hoffmann4.webp';
-import hoffmann5 from '../../../img/projects/hoffmann/hoffmann5.webp';
-import hoffmann6 from '../../../img/projects/hoffmann/hoffmann6.webp';
+import hoffmann1 from '../../../../img/projects/hoffmann/hoffmann1.webp';
+import hoffmann2 from '../../../../img/projects/hoffmann/hoffmann2.webp';
+import hoffmann3 from '../../../../img/projects/hoffmann/hoffmann3.webp';
+import hoffmann4 from '../../../../img/projects/hoffmann/hoffmann4.webp';
+import hoffmann5 from '../../../../img/projects/hoffmann/hoffmann5.webp';
+import hoffmann6 from '../../../../img/projects/hoffmann/hoffmann6.webp';
 
 const datosTecnicos = [
     { label: 'Tipología', value: 'Escenografías' },
