--- a/src/pages/en/projects/scenography/lammermoor.astro
+++ b/src/pages/en/projects/scenography/lammermoor.astro
@@ -1,13 +1,13 @@
 ---
-import lammermoor from '../../../img/projects/lammermoor.webp';
+import lammermoor from '../../../../img/projects/lammermoor.webp';
 import ProjectPage from '../../../../components/ProjectPage.astro';
 import Base from '../../../../layouts/Base.astro';
 import Layout from '../../../../layouts/Layout.astro';
 
-import lammermoor1 from '../../../img/projects/lammermoor/lammermoor1.webp';
-import lammermoor2 from '../../../img/projects/lammermoor/lammermoor2.webp';
-import lammermoor3 from '../../../img/projects/lammermoor/lammermoor3.webp';
-import lammermoor4 from '../../../img/projects/lammermoor/lammermoor4.webp';
+import lammermoor1 from '../../../../img/projects/lammermoor/lammermoor1.webp';
+import lammermoor2 from '../../../../img/projects/lammermoor/lammermoor2.webp';
+import lammermoor3 from '../../../../img/projects/lammermoor/lammermoor3.webp';
+import lammermoor4 from '../../../../img/projects/lammermoor/lammermoor4.webp';
 
 const datosTecnicos = [
     { label: 'Tipología', value: 'Escenografías' },
