--- a/src/pages/en/projects/scenography/maschera.astro
+++ b/src/pages/en/projects/scenography/maschera.astro
@@ -1,29 +1,29 @@
 ---
-import maschera from '../../../img/projects/maschera.webp';
+import maschera from '../../../../img/projects/maschera.webp';
 import ProjectPage from '../../../../components/ProjectPage.astro';
 import Base from '../../../../layouts/Base.astro';
 import Layout from '../../../../layouts/Layout.astro';
 
-import maschera1 from '../../../img/projects/maschera/maschera1.webp';
-import maschera2 from '../../../img/projects/maschera/maschera2.webp';
-import maschera3 from '../../../img/projects/maschera/maschera3.webp';
-import maschera4 from '../../../img/projects/maschera/maschera4.webp';
-import maschera5 from '../../../img/projects/maschera/maschera5.webp';
-import maschera6 from '../../../img/projects/maschera/maschera6.webp';
-import maschera7 from '../../../img/projects/maschera/maschera7.webp';
-import maschera8 from '../../../img/projects/maschera/maschera8.webp';
-import maschera9 from '../../../img/projects/maschera/maschera9.webp';
-import maschera10 from '../../../img/projects/maschera/maschera10.webp';
-import maschera11 from '../../../img/projects/maschera/maschera11.webp';
-import maschera12 from '../../../img/projects/maschera/maschera12.webp';
-import maschera13 from '../../../img/projects/maschera/maschera13.webp';
-import maschera14 from '../../../img/projects/maschera/maschera14.webp';
-import maschera15 from '../../../img/projects/maschera/maschera15.webp';
-import maschera16 from '../../../img/projects/maschera/maschera16.webp';
-import maschera17 from '../../../img/projects/maschera/maschera17.webp';
-import maschera18 from '../../../img/projects/maschera/maschera18.webp';
-import maschera19 from '../../../img/projects/maschera/maschera19.webp';
-import maschera20 from '../../../img/projects/maschera/maschera20.webp';
+import maschera1 from '../../../../img/projects/maschera/maschera1.webp';
+import maschera2 from '../../../../img/projects/maschera/maschera2.webp';
+import maschera3 from '../../../../img/projects/maschera/maschera3.webp';
+import maschera4 from '../../../../img/projects/maschera/maschera4.webp';
+import maschera5 from '../../../../img/projects/maschera/maschera5.webp';
+import maschera6 from '../../../../img/projects/maschera/maschera6.webp';
+import maschera7 from '../../../../img/projects/maschera/maschera7.webp';
+import maschera8 from '../../../../img/projects/maschera/maschera8.webp';
+import maschera9 from '../../../../img/projects/maschera/maschera9.webp';
+import maschera10 from '../../../../img/projects/maschera/maschera10.webp';
+import maschera11 from '../../../../img/projects/maschera/maschera11.webp';
+import maschera12 from '../../../../img/projects/maschera/maschera12.webp';
+import maschera13 from '../../../../img/projects/maschera/maschera13.webp';
+import maschera14 from '../../../../img/projects/maschera/maschera14.webp';
+import maschera15 from '../../../../img/projects/maschera/maschera15.webp';
+import maschera16 from '../../../../img/projects/maschera/maschera16.webp';
+import maschera17 from '../../../../img/projects/maschera/maschera17.webp';
+import maschera18 from '../../../../img/projects/maschera/maschera18.webp';
+import maschera19 from '../../../../img/projects/maschera/maschera19.webp';
+import maschera20 from '../../../../img/projects/maschera/maschera20.webp';
 
 const datosTecnicos = [
     { label: 'Tipología', value: 'Escenografías' },
