--- a/src/pages/en/projects/scenography/nabucco.astro
+++ b/src/pages/en/projects/scenography/nabucco.astro
@@ -1,29 +1,29 @@
 ---
-import nabucco from '../../../img/projects/nabucco.webp';
+import nabucco from '../../../../img/projects/nabucco.webp';
 import ProjectPage from '../../../../components/ProjectPage.astro';
 import Base from '../../../../layouts/Base.astro';
 import Layout from '../../../../layouts/Layout.astro';
 
-import nabucco1 from '../../../img/projects/nabucco/nabucco1.webp';
-import nabucco2 from '../../../img/projects/nabucco/nabucco2.webp';
-import nabucco3 from '../../../img/projects/nabucco/nabucco3.webp';
-import nabucco4 from '../../../img/projects/nabucco/nabucco4.webp';
-import nabucco5 from '../../../img/projects/nabucco/nabucco5.webp';
-import nabucco6 from '../../../img/projects/nabucco/nabucco6.webp';
-import nabucco7 from '../../../img/projects/nabucco/nabucco7.webp';
-import nabucco8 from '../../../img/projects/nabucco/nabucco8.webp';
-import nabucco9 from '../../../img/projects/nabucco/nabucco9.webp';
-import nabucco10 from '../../../img/projects/nabucco/nabucco10.webp';
-import nabucco11 from '../../../img/projects/nabucco/nabucco11.webp';
-import nabucco12 from '../../../img/projects/nabucco/nabucco12.webp';
-import nabucco13 from '../../../img/projects/nabucco/nabucco13.webp';
-import nabucco14 from '../../../img/projects/nabucco/nabucco14.webp';
-import nabucco15 from '../../../img/projects/nabucco/nabucco15.webp';
-import nabucco16 from '../../../img/projects/nabucco/nabucco16.webp';
-import nabucco17 from '../../../img/projects/nabucco/nabucco17.webp';
-import nabucco18 from '../../../img/projects/nabucco/nabucco18.webp';
-import nabucco19 from '../../../img/projects/nabucco/nabucco19.webp';
-import nabucco20 from '../../../img/projects/nabucco/nabucco20.webp';
+import nabucco1 from '../../../../img/projects/nabucco/nabucco1.webp';
+import nabucco2 from '../../../../img/projects/nabucco/nabucco2.webp';
+import nabucco3 from '../../../../img/projects/nabucco/nabucco3.webp';
+import nabucco4 from '../../../../img/projects/nabucco/nabucco4.webp';
+import nabucco5 from '../../../../img/projects/nabucco/nabucco5.webp';
+import nabucco6 from '../../../../img/projects/nabucco/nabucco6.webp';
+import nabucco7 from '../../../../img/projects/nabucco/nabucco7.webp';
+import nabucco8 from '../../../../img/projects/nabucco/nabucco8.webp';
+import nabucco9 from '../../../../img/projects/nabucco/nabucco9.webp';
+import nabucco10 from '../../../../img/projects/nabucco/nabucco10.webp';
+import nabucco11 from '../../../../img/projects/nabucco/nabucco11.webp';
+import nabucco12 from '../../../../img/projects/nabucco/nabucco12.webp';
+import nabucco13 from '../../../../img/projects/nabucco/nabucco13.webp';
+import nabucco14 from '../../../../img/projects/nabucco/nabucco14.webp';
+import nabucco15 from '../../../../img/projects/nabucco/nabucco15.webp';
+import nabucco16 from '../../../../img/projects/nabucco/nabucco16.webp';
+import nabucco17 from '../../../../img/projects/nabucco/nabucco17.webp';
+import nabucco18 from '../../../../img/projects/nabucco/nabucco18.webp';
+import nabucco19 from '../../../../img/projects/nabucco/nabucco19.webp';
+import nabucco20 from '../../../../img/projects/nabucco/nabucco20.webp';
 
 const datosTecnicos = [
     { label: 'Tipología', value: 'Escenografías' },
