--- a/src/pages/en/projects/scenography/ottello.astro
+++ b/src/pages/en/projects/scenography/ottello.astro
@@ -1,20 +1,20 @@
 ---
-import ottello from '../../../img/projects/ottello.webp';
+import ottello from '../../../../img/projects/ottello.webp';
 import ProjectPage from '../../../../components/ProjectPage.astro';
 import Base from '../../../../layouts/Base.astro';
 import Layout from '../../../../layouts/Layout.astro';
 
-import ottello1 from '../../../img/projects/ottello/ottello1.webp';
-import ottello2 from '../../../img/projects/ottello/ottello2.webp';
-import ottello3 from '../../../img/projects/ottello/ottello3.webp';
-import ottello4 from '../../../img/projects/ottello/ottello4.webp';
-import ottello5 from '../../../img/projects/ottello/ottello5.webp';
-import ottello6 from '../../../img/projects/ottello/ottello6.webp';
-import ottello7 from '../../../img/projects/ottello/ottello7.webp';
-import ottello8 from '../../../img/projects/ottello/ottello8.webp';
-import ottello9 from '../../../img/projects/ottello/ottello9.webp';
-import ottello10 from '../../../img/projects/ottello/ottello10.webp';
-import ottello11 from '../../../img/projects/ottello/ottello11.webp';
+import ottello1 from '../../../../img/projects/ottello/ottello1.webp';
+import ottello2 from '../../../../img/projects/ottello/ottello2.webp';
+import ottello3 from '../../../../img/projects/ottello/ottello3.webp';
+import ottello4 from '../../../../img/projects/ottello/ottello4.webp';
+import ottello5 from '../../../../img/projects/ottello/ottello5.webp';
+import ottello6 from '../../../../img/projects/ottello/ottello6.webp';
+import ottello7 from '../../../../img/projects/ottello/ottello7.webp';
+import ottello8 from '../../../../img/projects/ottello/ottello8.webp';
+import ottello9 from '../../../../img/projects/ottello/ottello9.webp';
+import ottello10 from '../../../../img/projects/ottello/ottello10.webp';
+import ottello11 from '../../../../img/projects/ottello/ottello11.webp';
 
 const datosTecnicos = [
     { label: 'Tipología', value: 'Escenografías' },
