--- a/src/pages/en/projects/scenography/pagliacci.astro
+++ b/src/pages/en/projects/scenography/pagliacci.astro
@@ -1,11 +1,11 @@
 ---
-import pagliacci from '../../../img/projects/pagliacci.webp';
+import pagliacci from '../../../../img/projects/pagliacci.webp';
 import ProjectPage from '../../../../components/ProjectPage.astro';
 import Base from '../../../../layouts/Base.astro';
 import Layout from '../../../../layouts/Layout.astro';
 
-import pagliacci1 from '../../../img/projects/pagliacci/pagliacci1.webp';
-import pagliacci2 from '../../../img/projects/pagliacci/pagliacci2.webp';
+import pagliacci1 from '../../../../img/projects/pagliacci/pagliacci1.webp';
+import pagliacci2 from '../../../../img/projects/pagliacci/pagliacci2.webp';
 
 const datosTecnicos = [
     { label: 'Tipología', value: 'Escenografías' },
