--- a/src/pages/en/projects/scenography/schicchi.astro
+++ b/src/pages/en/projects/scenography/schicchi.astro
@@ -1,11 +1,11 @@
 ---
-import schicchi from '../../../img/projects/schicchi.webp';
+import schicchi from '../../../../img/projects/schicchi.webp';
 import ProjectPage from '../../../../components/ProjectPage.astro';
 import Base from '../../../../layouts/Base.astro';
 import Layout from '../../../../layouts/Layout.astro';
 
-import schicchi1 from '../../../img/projects/schicchi/schicchi1.webp';
-import schicchi2 from '../../../img/projects/schicchi/schicchi2.webp';
+import schicchi1 from '../../../../img/projects/schicchi/schicchi1.webp';
+import schicchi2 from '../../../../img/projects/schicchi/schicchi2.webp';
 
 const datosTecnicos = [
     { label: 'Tipología', value: 'Escenografías' },
