--- a/src/pages/en/projects/scenography/soldaten.astro
+++ b/src/pages/en/projects/scenography/soldaten.astro
@@ -1,13 +1,13 @@
 ---
-import soldaten from '../../../img/projects/soldaten.webp';
+import soldaten from '../../../../img/projects/soldaten.webp';
 import ProjectPage from '../../../../components/ProjectPage.astro';
 import Base from '../../../../layouts/Base.astro';
 import Layout from '../../../../layouts/Layout.astro';
 
-import soldaten1 from '../../../img/projects/soldaten/soldaten1.webp';
-import soldaten2 from '../../../img/projects/soldaten/soldaten2.webp';
-import soldaten3 from '../../../img/projects/soldaten/soldaten3.webp';
-import soldaten4 from '../../../img/projects/soldaten/soldaten4.webp';
+import soldaten1 from '../../../../img/projects/soldaten/soldaten1.webp';
+import soldaten2 from '../../../../img/projects/soldaten/soldaten2.webp';
+import soldaten3 from '../../../../img/projects/soldaten/soldaten3.webp';
+import soldaten4 from '../../../../img/projects/soldaten/soldaten4.webp';
 
 const datosTecnicos = [
     { label: 'Tipología', value: 'Escenografías' },
