--- a/src/pages/en/projects/scenography/traviata.astro
+++ b/src/pages/en/projects/scenography/traviata.astro
@@ -1,19 +1,19 @@
 ---
-import traviata from '../../../img/projects/traviata.webp';
+import traviata from '../../../../img/projects/traviata.webp';
 import ProjectPage from '../../../../components/ProjectPage.astro';
 import Base from '../../../../layouts/Base.astro';
 import Layout from '../../../../layouts/Layout.astro';
 
-import traviata1 from '../../../img/projects/traviata/traviata1.webp';
-import traviata2 from '../../../img/projects/traviata/traviata2.webp';
-import traviata3 from '../../../img/projects/traviata/traviata3.webp';
-import traviata4 from '../../../img/projects/traviata/traviata4.webp';
-import traviata5 from '../../../img/projects/traviata/traviata5.webp';
-import traviata6 from '../../../img/projects/traviata/traviata6.webp';
-import traviata7 from '../../../img/projects/traviata/traviata7.webp';
-import traviata8 from '../../../img/projects/traviata/traviata8.webp';
-import traviata9 from '../../../img/projects/traviata/traviata9.webp';
-import traviata10 from '../../../img/projects/traviata/traviata10.webp';
+import traviata1 from '../../../../img/projects/traviata/traviata1.webp';
+import traviata2 from '../../../../img/projects/traviata/traviata2.webp';
+import traviata3 from '../../../../img/projects/traviata/traviata3.webp';
+import traviata4 from '../../../../img/projects/traviata/traviata4.webp';
+import traviata5 from '../../../../img/projects/traviata/traviata5.webp';
+import traviata6 from '../../../../img/projects/traviata/traviata6.webp';
+import traviata7 from '../../../../img/projects/traviata/traviata7.webp';
+import traviata8 from '../../../../img/projects/traviata/traviata8.webp';
+import traviata9 from '../../../../img/projects/traviata/traviata9.webp';
+import traviata10 from '../../../../img/projects/traviata/traviata10.webp';
 
 const datosTecnicos = [
     { label: 'Tipología', value: 'Escenografías' },
