--- a/src/pages/en/projects/scenography/trovatore.astro
+++ b/src/pages/en/projects/scenography/trovatore.astro
@@ -1,14 +1,14 @@
 ---
-import trovatore from '../../../img/projects/trovatore.webp';
+import trovatore from '../../../../img/projects/trovatore.webp';
 import ProjectPage from '../../../../components/ProjectPage.astro';
 import Base from '../../../../layouts/Base.astro';
 import Layout from '../../../../layouts/Layout.astro';
 
-import trovatore1 from '../../../img/projects/trovatore/trovatore1.webp';
-import trovatore2 from '../../../img/projects/trovatore/trovatore2.webp';
-import trovatore3 from '../../../img/projects/trovatore/trovatore3.webp';
-import trovatore4 from '../../../img/projects/trovatore/trovatore4.webp';
-import trovatore5 from '../../../img/projects/trovatore/trovatore5.webp';
+import trovatore1 from '../../../../img/projects/trovatore/trovatore1.webp';
+import trovatore2 from '../../../../img/projects/trovatore/trovatore2.webp';
+import trovatore3 from '../../../../img/projects/trovatore/trovatore3.webp';
+import trovatore4 from '../../../../img/projects/trovatore/trovatore4.webp';
+import trovatore5 from '../../../../img/projects/trovatore/trovatore5.webp';
 
 const datosTecnicos = [
     { label: 'Tipología', value: 'Escenografías' },
