--- a/src/pages/en/projects/scenography/turandot.astro
+++ b/src/pages/en/projects/scenography/turandot.astro
@@ -1,14 +1,14 @@
 ---
-import turandot from '../../../img/projects/turandot.webp';
+import turandot from '../../../../img/projects/turandot.webp';
 import ProjectPage from '../../../../components/ProjectPage.astro';
 import Base from '../../../../layouts/Base.astro';
 import Layout from '../../../../layouts/Layout.astro';
 
-import turandot1 from '../../../img/projects/turandot/turandot1.webp';
-import turandot2 from '../../../img/projects/turandot/turandot2.webp';
-import turandot3 from '../../../img/projects/turandot/turandot3.webp';
-import turandot4 from '../../../img/projects/turandot/turandot4.webp';
-import turandot5 from '../../../img/projects/turandot/turandot5.webp';
+import turandot1 from '../../../../img/projects/turandot/turandot1.webp';
+import turandot2 from '../../../../img/projects/turandot/turandot2.webp';
+import turandot3 from '../../../../img/projects/turandot/turandot3.webp';
+import turandot4 from '../../../../img/projects/turandot/turandot4.webp';
+import turandot5 from '../../../../img/projects/turandot/turandot5.webp';
 
 const datosTecnicos = [
     { label: 'Tipología', value: 'Escenografías' },
