--- a/src/pages/en/projects/scenography/vespri.astro
+++ b/src/pages/en/projects/scenography/vespri.astro
@@ -1,13 +1,13 @@
 ---
-import vespri from '../../../img/projects/vespri.webp';
+import vespri from '../../../../img/projects/vespri.webp';
 import ProjectPage from '../../../../components/ProjectPage.astro';
 import Base from '../../../../layouts/Base.astro';
 import Layout from '../../../../layouts/Layout.astro';
 
-import vespri1 from '../../../img/projects/vespri/vespri1.webp';
-import vespri2 from '../../../img/projects/vespri/vespri2.webp';
-import vespri3 from '../../../img/projects/vespri/vespri3.webp';
-import vespri4 from '../../../img/projects/vespri/vespri4.webp';
+import vespri1 from '../../../../img/projects/vespri/vespri1.webp';
+import vespri2 from '../../../../img/projects/vespri/vespri2.webp';
+import vespri3 from '../../../../img/projects/vespri/vespri3.webp';
+import vespri4 from '../../../../img/projects/vespri/vespri4.webp';
 
 const datosTecnicos = [
     { label: 'Tipología', value: 'Escenografías' },
