--- a/src/pages/en/projects/theaters/eastman-theater.astro
+++ b/src/pages/en/projects/theaters/eastman-theater.astro
@@ -1,17 +1,17 @@
 ---
-import eastman from '../../../img/projects/eastman.webp';
+import eastman from '../../../../img/projects/eastman.webp';
 import ProjectPage from '../../../../components/ProjectPage.astro';
 import Base from '../../../../layouts/Base.astro';
 import Layout from '../../../../layouts/Layout.astro';
 
-import eastman1 from '../../../img/projects/eastman/eastman1.webp';
-import eastman2 from '../../../img/projects/eastman/eastman2.webp';
-import eastman3 from '../../../img/projects/eastman/eastman3.webp';
-import eastman4 from '../../../img/projects/eastman/eastman4.webp';
-import eastman5 from '../../../img/projects/eastman/eastman5.webp';
-import eastman6 from '../../../img/projects/eastman/eastman6.webp';
-import eastman7 from '../../../img/projects/eastman/eastman7.webp';
-import eastman8 from '../../../img/projects/eastman/eastman8.webp';
+import eastman1 from '../../../../img/projects/eastman/eastman1.webp';
+import eastman2 from '../../../../img/projects/eastman/eastman2.webp';
+import eastman3 from '../../../../img/projects/eastman/eastman3.webp';
+import eastman4 from '../../../../img/projects/eastman/eastman4.webp';
+import eastman5 from '../../../../img/projects/eastman/eastman5.webp';
+import eastman6 from '../../../../img/projects/eastman/eastman6.webp';
+import eastman7 from '../../../../img/projects/eastman/eastman7.webp';
+import eastman8 from '../../../../img/projects/eastman/eastman8.webp';
 
 const datosTecnicos = [
     { label: 'Tipología', value: 'Teatro' },
