--- a/src/pages/en/projects/theaters/kimmel-center.astro
+++ b/src/pages/en/projects/theaters/kimmel-center.astro
@@ -1,13 +1,13 @@
 ---
-import kimmel from '../../../img/projects/kimmel.webp';
+import kimmel from '../../../../img/projects/kimmel.webp';
 import ProjectPage from '../../../../components/ProjectPage.astro';
 import Base from '../../../../layouts/Base.astro';
 import Layout from '../../../../layouts/Layout.astro';
 
-import kimmel1 from '../../../img/projects/kimmel/kimmel1.webp';
-import kimmel2 from '../../../img/projects/kimmel/kimmel2.webp';
-import kimmel3 from '../../../img/projects/kimmel/kimmel3.webp';
-import kimmel4 from '../../../img/projects/kimmel/kimmel4.webp';
+import kimmel1 from '../../../../img/projects/kimmel/kimmel1.webp';
+import kimmel2 from '../../../../img/projects/kimmel/kimmel2.webp';
+import kimmel3 from '../../../../img/projects/kimmel/kimmel3.webp';
+import kimmel4 from '../../../../img/projects/kimmel/kimmel4.webp';
 
 const datosTecnicos = [
     { label: 'Tipología', value: 'Concert Hall' },
