--- a/src/pages/en/projects/theaters/teatro-argentino.astro
+++ b/src/pages/en/projects/theaters/teatro-argentino.astro
@@ -1,22 +1,22 @@
 ---
-import argentino from '../../../img/projects/argentino.webp';
+import argentino from '../../../../img/projects/argentino.webp';
 import ProjectPage from '../../../../components/ProjectPage.astro';
 import Base from '../../../../layouts/Base.astro';
 import Layout from '../../../../layouts/Layout.astro';
 
-import argentino1 from '../../../img/projects/argentino/argentino1.webp';
-import argentino2 from '../../../img/projects/argentino/argentino2.webp';
-import argentino3 from '../../../img/projects/argentino/argentino3.webp';
-import argentino4 from '../../../img/projects/argentino/argentino4.webp';
-import argentino5 from '../../../img/projects/argentino/argentino5.webp';
-import argentino6 from '../../../img/projects/argentino/argentino6.webp';
-import argentino7 from '../../../img/projects/argentino/argentino7.webp';
-import argentino8 from '../../../img/projects/argentino/argentino8.webp';
-import argentino9 from '../../../img/projects/argentino/argentino9.webp';
-import argentino10 from '../../../img/projects/argentino/argentino10.webp';
-import argentino11 from '../../../img/projects/argentino/argentino11.webp';
-import argentino12 from '../../../img/projects/argentino/argentino12.webp';
-import argentino13 from '../../../img/projects/argentino/argentino13.webp';
+import argentino1 from '../../../../img/projects/argentino/argentino1.webp';
+import argentino2 from '../../../../img/projects/argentino/argentino2.webp';
+import argentino3 from '../../../../img/projects/argentino/argentino3.webp';
+import argentino4 from '../../../../img/projects/argentino/argentino4.webp';
+import argentino5 from '../../../../img/projects/argentino/argentino5.webp';
+import argentino6 from '../../../../img/projects/argentino/argentino6.webp';
+import argentino7 from '../../../../img/projects/argentino/argentino7.webp';
+import argentino8 from '../../../../img/projects/argentino/argentino8.webp';
+import argentino9 from '../../../../img/projects/argentino/argentino9.webp';
+import argentino10 from '../../../../img/projects/argentino/argentino10.webp';
+import argentino11 from '../../../../img/projects/argentino/argentino11.webp';
+import argentino12 from '../../../../img/projects/argentino/argentino12.webp';
+import argentino13 from '../../../../img/projects/argentino/argentino13.webp';
 
 const datosTecnicos = [
     { label: 'Tipología', value: 'Teatro' },
