--- a/src/pages/en/projects/theaters/teatro-coliseo.astro
+++ b/src/pages/en/projects/theaters/teatro-coliseo.astro
@@ -1,48 +1,48 @@
 ---
-import coliseo from '../../../img/projects/coliseo.webp';
+import coliseo from '../../../../img/projects/coliseo.webp';
 import ProjectPage from '../../../../components/ProjectPage.astro';
 import Base from '../../../../layouts/Base.astro';
 import Layout from '../../../../layouts/Layout.astro';
 
-import coliseo1 from '../../../img/projects/coliseo/coliseo1.webp';
-import coliseo2 from '../../../img/projects/coliseo/coliseo2.webp';
-import coliseo3 from '../../../img/projects/coliseo/coliseo3.webp';
-import coliseo4 from '../../../img/projects/coliseo/coliseo4.webp';
-import coliseo5 from '../../../img/projects/coliseo/coliseo5.webp';
-import coliseo6 from '../../../img/projects/coliseo/coliseo6.webp';
-import coliseo7 from '../../../img/projects/coliseo/coliseo7.webp';
-import coliseo8 from '../../../img/projects/coliseo/coliseo8.webp';
-import coliseo9 from '../../../img/projects/coliseo/coliseo9.webp';
-import coliseo10 from '../../../img/projects/coliseo/coliseo10.webp';
-import coliseo11 from '../../../img/projects/coliseo/coliseo11.webp';
-import coliseo12 from '../../../img/projects/coliseo/coliseo12.webp';
-import coliseo13 from '../../../img/projects/coliseo/coliseo13.webp';
-import coliseo14 from '../../../img/projects/coliseo/coliseo14.webp';
-import coliseo15 from '../../../img/projects/coliseo/coliseo15.webp';
-import coliseo16 from '../../../img/projects/coliseo/coliseo16.webp';
-import coliseo17 from '../../../img/projects/coliseo/coliseo17.webp';
-import coliseo18 from '../../../img/projects/coliseo/coliseo18.webp';
-import coliseo19 from '../../../img/projects/coliseo/coliseo19.webp';
-import coliseo20 from '../../../img/projects/coliseo/coliseo20.webp';
-import coliseo21 from '../../../img/projects/coliseo/coliseo21.webp';
-import coliseo22 from '../../../img/projects/coliseo/coliseo22.webp';
-import coliseo23 from '../../../img/projects/coliseo/coliseo23.webp';
-import coliseo24 from '../../../img/projects/coliseo/coliseo24.webp';
-import coliseo25 from '../../../img/projects/coliseo/coliseo25.webp';
-import coliseo26 from '../../../img/projects/coliseo/coliseo26.webp';
-import coliseo27 from '../../../img/projects/coliseo/coliseo27.webp';
-import coliseo28 from '../../../img/projects/coliseo/coliseo28.webp';
-import coliseo29 from '../../../img/projects/coliseo/coliseo29.webp';
-import coliseo30 from '../../../img/projects/coliseo/coliseo30.webp';
-import coliseo31 from '../../../img/projects/coliseo/coliseo31.webp';
-import coliseo32 from '../../../img/projects/coliseo/coliseo32.webp';
-import coliseo33 from '../../../img/projects/coliseo/coliseo33.webp';
-import coliseo34 from '../../../img/projects/coliseo/coliseo34.webp';
-import coliseo35 from '../../../img/projects/coliseo/coliseo35.webp';
-import coliseo36 from '../../../img/projects/coliseo/coliseo36.webp';
-import coliseo37 from '../../../img/projects/coliseo/coliseo37.webp';
-import coliseo38 from '../../../img/projects/coliseo/coliseo38.webp';
-import coliseo39 from '../../../img/projects/coliseo/coliseo39.webp';
+import coliseo1 from '../../../../img/projects/coliseo/coliseo1.webp';
+import coliseo2 from '../../../../img/projects/coliseo/coliseo2.webp';
+import coliseo3 from '../../../../img/projects/coliseo/coliseo3.webp';
+import coliseo4 from '../../../../img/projects/coliseo/coliseo4.webp';
+import coliseo5 from '../../../../img/projects/coliseo/coliseo5.webp';
+import coliseo6 from '../../../../img/projects/coliseo/coliseo6.webp';
+import coliseo7 from '../../../../img/projects/coliseo/coliseo7.webp';
+import coliseo8 from '../../../../img/projects/coliseo/coliseo8.webp';
+import coliseo9 from '../../../../img/projects/coliseo/coliseo9.webp';
+import coliseo10 from '../../../../img/projects/coliseo/coliseo10.webp';
+import coliseo11 from '../../../../img/projects/coliseo/coliseo11.webp';
+import coliseo12 from '../../../../img/projects/coliseo/coliseo12.webp';
+import coliseo13 from '../../../../img/projects/coliseo/coliseo13.webp';
+import coliseo14 from '../../../../img/projects/coliseo/coliseo14.webp';
+import coliseo15 from '../../../../img/projects/coliseo/coliseo15.webp';
+import coliseo16 from '../../../../img/projects/coliseo/coliseo16.webp';
+import coliseo17 from '../../../../img/projects/coliseo/coliseo17.webp';
+import coliseo18 from '../../../../img/projects/coliseo/coliseo18.webp';
+import coliseo19 from '../../../../img/projects/coliseo/coliseo19.webp';
+import coliseo20 from '../../../../img/projects/coliseo/coliseo20.webp';
+import coliseo21 from '../../../../img/projects/coliseo/coliseo21.webp';
+import coliseo22 from '../../../../img/projects/coliseo/coliseo22.webp';
+import coliseo23 from '../../../../img/projects/coliseo/coliseo23.webp';
+import coliseo24 from '../../../../img/projects/coliseo/coliseo24.webp';
+import coliseo25 from '../../../../img/projects/coliseo/coliseo25.webp';
+import coliseo26 from '../../../../img/projects/coliseo/coliseo26.webp';
+import coliseo27 from '../../../../img/projects/coliseo/coliseo27.webp';
+import coliseo28 from '../../../../img/projects/coliseo/coliseo28.webp';
+import coliseo29 from '../../../../img/projects/coliseo/coliseo29.webp';
+import coliseo30 from '../../../../img/projects/coliseo/coliseo30.webp';
+import coliseo31 from '../../../../img/projects/coliseo/coliseo31.webp';
+import coliseo32 from '../../../../img/projects/coliseo/coliseo32.webp';
+import coliseo33 from '../../../../img/projects/coliseo/coliseo33.webp';
+import coliseo34 from '../../../../img/projects/coliseo/coliseo34.webp';
+import coliseo35 from '../../../../img/projects/coliseo/coliseo35.webp';
+import coliseo36 from '../../../../img/projects/coliseo/coliseo36.webp';
+import coliseo37 from '../../../../img/projects/coliseo/coliseo37.webp';
+import coliseo38 from '../../../../img/projects/coliseo/coliseo38.webp';
+import coliseo39 from '../../../../img/projects/coliseo/coliseo39.webp';
 
 const datosTecnicos = [
     { label: 'Tipología', value: 'Teatro' },
