--- a/src/pages/en/projects/theaters/teatro-colon.astro
+++ b/src/pages/en/projects/theaters/teatro-colon.astro
@@ -1,15 +1,15 @@
 ---
-import colon from '../../../img/projects/colon.webp';
+import colon from '../../../../img/projects/colon.webp';
 import ProjectPage from '../../../../components/ProjectPage.astro';
 import Base from '../../../../layouts/Base.astro';
 import Layout from '../../../../layouts/Layout.astro';
 
-import colon1 from '../../../img/projects/colon/colon1.webp';
-import colon2 from '../../../img/projects/colon/colon2.webp';
-import colon3 from '../../../img/projects/colon/colon3.webp';
-import colon4 from '../../../img/projects/colon/colon4.webp';
-import colon5 from '../../../img/projects/colon/colon5.webp';
-import colon6 from '../../../img/projects/colon/colon6.webp';
+import colon1 from '../../../../img/projects/colon/colon1.webp';
+import colon2 from '../../../../img/projects/colon/colon2.webp';
+import colon3 from '../../../../img/projects/colon/colon3.webp';
+import colon4 from '../../../../img/projects/colon/colon4.webp';
+import colon5 from '../../../../img/projects/colon/colon5.webp';
+import colon6 from '../../../../img/projects/colon/colon6.webp';
 
 const datosTecnicos = [
     { label: 'Tipología', value: 'Teatro' },
