--- a/src/pages/en/projects/theaters/teatro-condes.astro
+++ b/src/pages/en/projects/theaters/teatro-condes.astro
@@ -1,23 +1,23 @@
 ---
-import condes from '../../../img/projects/condes.webp';
+import condes from '../../../../../img/projects/condes.webp';
 import ProjectPage from '../../../../components/ProjectPage.astro';
 import Base from '../../../../layouts/Base.astro';
 import Layout from '../../../../layouts/Layout.astro';
 
-import condes1 from '../../../img/projects/condes/condes1.webp';
-import condes2 from '../../../img/projects/condes/condes2.webp';
-import condes3 from '../../../img/projects/condes/condes3.webp';
-import condes4 from '../../../img/projects/condes/condes4.webp';
-import condes5 from '../../../img/projects/condes/condes5.webp';
-import condes6 from '../../../img/projects/condes/condes6.webp';
-import condes7 from '../../../img/projects/condes/condes7.webp';
-import condes8 from '../../../img/projects/condes/condes8.webp';
-import condes9 from '../../../img/projects/condes/condes9.webp';
-import condes10 from '../../../img/projects/condes/condes10.webp';
-import condes11 from '../../../img/projects/condes/condes11.webp';
-import condes12 from '../../../img/projects/condes/condes12.webp';
-import condes13 from '../../../img/projects/condes/condes13.webp';
-import condes14 from '../../../img/projects/condes/condes14.webp';
+import condes1 from '../../../../img/projects/condes/condes1.webp';
+import condes2 from '../../../../img/projects/condes/condes2.webp';
+import condes3 from '../../../../img/projects/condes/condes3.webp';
+import condes4 from '../../../../img/projects/condes/condes4.webp';
+import condes5 from '../../../../img/projects/condes/condes5.webp';
+import condes6 from '../../../../img/projects/condes/condes6.webp';
+import condes7 from '../../../../img/projects/condes/condes7.webp';
+import condes8 from '../../../../img/projects/condes/condes8.webp';
+import condes9 from '../../../../img/projects/condes/condes9.webp';
+import condes10 from '../../../../img/projects/condes/condes10.webp';
+import condes11 from '../../../../img/projects/condes/condes11.webp';
+import condes12 from '../../../../img/projects/condes/condes12.webp';
+import condes13 from '../../../../img/projects/condes/condes13.webp';
+import condes14 from '../../../../img/projects/condes/condes14.webp';
 
 const datosTecnicos = [
     { label: 'Tipología', value: 'Teatro' },
