--- a/src/pages/en/projects/theaters/teatro-del-lago.astro
+++ b/src/pages/en/projects/theaters/teatro-del-lago.astro
@@ -1,29 +1,29 @@
 ---
-import lago from '../../../img/projects/lago.webp';
+import lago from '../../../../img/projects/lago.webp';
 import ProjectPage from '../../../../components/ProjectPage.astro';
 import Base from '../../../../layouts/Base.astro';
 import Layout from '../../../../layouts/Layout.astro';
 
-import lago1 from '../../../img/projects/lago/lago1.webp';
-import lago2 from '../../../img/projects/lago/lago2.webp';
-import lago3 from '../../../img/projects/lago/lago3.webp';
-import lago4 from '../../../img/projects/lago/lago4.webp';
-import lago5 from '../../../img/projects/lago/lago5.webp';
-import lago6 from '../../../img/projects/lago/lago6.webp';
-import lago7 from '../../../img/projects/lago/lago7.webp';
-import lago8 from '../../../img/projects/lago/lago8.webp';
-import lago9 from '../../../img/projects/lago/lago9.webp';
-import lago10 from '../../../img/projects/lago/lago10.webp';
-import lago11 from '../../../img/projects/lago/lago11.webp';
-import lago12 from '../../../img/projects/lago/lago12.webp';
-import lago13 from '../../../img/projects/lago/lago13.webp';
-import lago14 from '../../../img/projects/lago/lago14.webp';
-import lago15 from '../../../img/projects/lago/lago15.webp';
-import lago16 from '../../../img/projects/lago/lago16.webp';
-import lago17 from '../../../img/projects/lago/lago17.webp';
-import lago18 from '../../../img/projects/lago/lago18.webp';
-import lago19 from '../../../img/projects/lago/lago19.webp';
-import lago20 from '../../../img/projects/lago/lago20.webp';
+import lago1 from '../../../../img/projects/lago/lago1.webp';
+import lago2 from '../../../../img/projects/lago/lago2.webp';
+import lago3 from '../../../../img/projects/lago/lago3.webp';
+import lago4 from '../../../../img/projects/lago/lago4.webp';
+import lago5 from '../../../../img/projects/lago/lago5.webp';
+import lago6 from '../../../../img/projects/lago/lago6.webp';
+import lago7 from '../../../../img/projects/lago/lago7.webp';
+import lago8 from '../../../../img/projects/lago/lago8.webp';
+import lago9 from '../../../../img/projects/lago/lago9.webp';
+import lago10 from '../../../../img/projects/lago/lago10.webp';
+import lago11 from '../../../../img/projects/lago/lago11.webp';
+import lago12 from '../../../../img/projects/lago/lago12.webp';
+import lago13 from '../../../../img/projects/lago/lago13.webp';
+import lago14 from '../../../../img/projects/lago/lago14.webp';
+import lago15 from '../../../../img/projects/lago/lago15.webp';
+import lago16 from '../../../../img/projects/lago/lago16.webp';
+import lago17 from '../../../../img/projects/lago/lago17.webp';
+import lago18 from '../../../../img/projects/lago/lago18.webp';
+import lago19 from '../../../../img/projects/lago/lago19.webp';
+import lago20 from '../../../../img/projects/lago/lago20.webp';
 
 const datosTecnicos = [
     { label: 'Tipología', value: 'Teatro' },
