--- a/src/pages/en/projects/theaters/teatro-del-libertador.astro
+++ b/src/pages/en/projects/theaters/teatro-del-libertador.astro
@@ -1,22 +1,22 @@
 ---
-import libertador from '../../../img/projects/libertador.webp';
+import libertador from '../../../../img/projects/libertador.webp';
 import ProjectPage from '../../../../components/ProjectPage.astro';
 import Base from '../../../../layouts/Base.astro';
 import Layout from '../../../../layouts/Layout.astro';
 
-import libertador1 from '../../../img/projects/libertador/libertador1.webp';
-import libertador2 from '../../../img/projects/libertador/libertador2.webp';
-import libertador3 from '../../../img/projects/libertador/libertador3.webp';
-import libertador4 from '../../../img/projects/libertador/libertador4.webp';
-import libertador5 from '../../../img/projects/libertador/libertador5.webp';
-import libertador6 from '../../../img/projects/libertador/libertador6.webp';
-import libertador7 from '../../../img/projects/libertador/libertador7.webp';
-import libertador8 from '../../../img/projects/libertador/libertador8.webp';
-import libertador9 from '../../../img/projects/libertador/libertador9.webp';
-import libertador10 from '../../../img/projects/libertador/libertador10.webp';
-import libertador11 from '../../../img/projects/libertador/libertador11.webp';
-import libertador12 from '../../../img/projects/libertador/libertador12.webp';
-import libertador13 from '../../../img/projects/libertador/libertador13.webp';
+import libertador1 from '../../../../img/projects/libertador/libertador1.webp';
+import libertador2 from '../../../../img/projects/libertador/libertador2.webp';
+import libertador3 from '../../../../img/projects/libertador/libertador3.webp';
+import libertador4 from '../../../../img/projects/libertador/libertador4.webp';
+import libertador5 from '../../../../img/projects/libertador/libertador5.webp';
+import libertador6 from '../../../../img/projects/libertador/libertador6.webp';
+import libertador7 from '../../../../img/projects/libertador/libertador7.webp';
+import libertador8 from '../../../../img/projects/libertador/libertador8.webp';
+import libertador9 from '../../../../img/projects/libertador/libertador9.webp';
+import libertador10 from '../../../../img/projects/libertador/libertador10.webp';
+import libertador11 from '../../../../img/projects/libertador/libertador11.webp';
+import libertador12 from '../../../../img/projects/libertador/libertador12.webp';
+import libertador13 from '../../../../img/projects/libertador/libertador13.webp';
 
 const datosTecnicos = [
     { label: 'Tipología', value: 'Teatro' },
