--- a/src/pages/en/projects/theaters/teatro-la-dehesa.astro
+++ b/src/pages/en/projects/theaters/teatro-la-dehesa.astro
@@ -1,30 +1,30 @@
 ---
-import dehesa from '../../../img/projects/dehesa.webp';
+import dehesa from '../../../../img/projects/dehesa.webp';
 import ProjectPage from '../../../../components/ProjectPage.astro';
 import Base from '../../../../layouts/Base.astro';
 import Layout from '../../../../layouts/Layout.astro';
 
-import dehesa1 from '../../../img/projects/dehesa/dehesa1.webp';
-import dehesa2 from '../../../img/projects/dehesa/dehesa2.webp';
-import dehesa3 from '../../../img/projects/dehesa/dehesa3.webp';
-import dehesa4 from '../../../img/projects/dehesa/dehesa4.webp';
-import dehesa5 from '../../../img/projects/dehesa/dehesa5.webp';
-import dehesa6 from '../../../img/projects/dehesa/dehesa6.webp';
-import dehesa7 from '../../../img/projects/dehesa/dehesa7.webp';
-// import dehesa8 from '../../../img/projects/dehesa/dehesa8.webp';
-import dehesa9 from '../../../img/projects/dehesa/dehesa9.webp';
-import dehesa10 from '../../../img/projects/dehesa/dehesa10.webp';
-import dehesa11 from '../../../img/projects/dehesa/dehesa11.webp';
-import dehesa12 from '../../../img/projects/dehesa/dehesa12.webp';
-import dehesa13 from '../../../img/projects/dehesa/dehesa13.webp';
-import dehesa14 from '../../../img/projects/dehesa/dehesa14.webp';
-import dehesa15 from '../../../img/projects/dehesa/dehesa15.webp';
-import dehesa16 from '../../../img/projects/dehesa/dehesa16.webp';
-import dehesa17 from '../../../img/projects/dehesa/dehesa17.webp';
-import dehesa18 from '../../../img/projects/dehesa/dehesa18.webp';
-import dehesa19 from '../../../img/projects/dehesa/dehesa19.webp';
-import dehesa20 from '../../../img/projects/dehesa/dehesa20.webp';
-import dehesa21 from '../../../img/projects/dehesa/dehesa21.webp';
+import dehesa1 from '../../../../img/projects/dehesa/dehesa1.webp';
+import dehesa2 from '../../../../img/projects/dehesa/dehesa2.webp';
+import dehesa3 from '../../../../img/projects/dehesa/dehesa3.webp';
+import dehesa4 from '../../../../img/projects/dehesa/dehesa4.webp';
+import dehesa5 from '../../../../img/projects/dehesa/dehesa5.webp';
+import dehesa6 from '../../../../img/projects/dehesa/dehesa6.webp';
+import dehesa7 from '../../../../img/projects/dehesa/dehesa7.webp';
+// import dehesa8 from '../../../../img/projects/dehesa/dehesa8.webp';
+import dehesa9 from '../../../../img/projects/dehesa/dehesa9.webp';
+import dehesa10 from '../../../../img/projects/dehesa/dehesa10.webp';
+import dehesa11 from '../../../../img/projects/dehesa/dehesa11.webp';
+import dehesa12 from '../../../../img/projects/dehesa/dehesa12.webp';
+import dehesa13 from '../../../../img/projects/dehesa/dehesa13.webp';
+import dehesa14 from '../../../../img/projects/dehesa/dehesa14.webp';
+import dehesa15 from '../../../../img/projects/dehesa/dehesa15.webp';
+import dehesa16 from '../../../../img/projects/dehesa/dehesa16.webp';
+import dehesa17 from '../../../../img/projects/dehesa/dehesa17.webp';
+import dehesa18 from '../../../../img/projects/dehesa/dehesa18.webp';
+import dehesa19 from '../../../../img/projects/dehesa/dehesa19.webp';
+import dehesa20 from '../../../../img/projects/dehesa/dehesa20.webp';
+import dehesa21 from '../../../../img/projects/dehesa/dehesa21.webp';
 
 const datosTecnicos = [
     { label: 'Tipología', value: 'Teatro' },
