--- a/src/pages/en/projects/theaters/teatro-la-serena.astro
+++ b/src/pages/en/projects/theaters/teatro-la-serena.astro
@@ -1,16 +1,16 @@
 ---
-import serena from '../../../img/projects/serena.webp';
+import serena from '../../../../img/projects/serena.webp';
 import ProjectPage from '../../../../components/ProjectPage.astro';
 import Base from '../../../../layouts/Base.astro';
 import Layout from '../../../../layouts/Layout.astro';
 
-import serena1 from '../../../img/projects/serena/serena1.webp';
-import serena2 from '../../../img/projects/serena/serena2.webp';
-import serena3 from '../../../img/projects/serena/serena3.webp';
-import serena4 from '../../../img/projects/serena/serena4.webp';
-import serena5 from '../../../img/projects/serena/serena5.webp';
-import serena6 from '../../../img/projects/serena/serena6.webp';
-import serena7 from '../../../img/projects/serena/serena7.webp';
+import serena1 from '../../../../img/projects/serena/serena1.webp';
+import serena2 from '../../../../img/projects/serena/serena2.webp';
+import serena3 from '../../../../img/projects/serena/serena3.webp';
+import serena4 from '../../../../img/projects/serena/serena4.webp';
+import serena5 from '../../../../img/projects/serena/serena5.webp';
+import serena6 from '../../../../img/projects/serena/serena6.webp';
+import serena7 from '../../../../img/projects/serena/serena7.webp';
 
 const datosTecnicos = [
     { label: 'Tipología', value: 'Teatro' },
