--- a/src/pages/en/projects/theaters/teatro-martin-fierro.astro
+++ b/src/pages/en/projects/theaters/teatro-martin-fierro.astro
@@ -1,19 +1,19 @@
 ---
-import fierro from '../../../img/projects/fierro.webp';
+import fierro from '../../../../img/projects/fierro.webp';
 import ProjectPage from '../../../../components/ProjectPage.astro';
 import Base from '../../../../layouts/Base.astro';
 import Layout from '../../../../layouts/Layout.astro';
 
-import fierro1 from '../../../img/projects/fierro/fierro1.webp';
-import fierro2 from '../../../img/projects/fierro/fierro2.webp';
-import fierro3 from '../../../img/projects/fierro/fierro3.webp';
-import fierro4 from '../../../img/projects/fierro/fierro4.webp';
-import fierro5 from '../../../img/projects/fierro/fierro5.webp';
-import fierro6 from '../../../img/projects/fierro/fierro6.webp';
-import fierro7 from '../../../img/projects/fierro/fierro7.webp';
-import fierro8 from '../../../img/projects/fierro/fierro8.webp';
-import fierro9 from '../../../img/projects/fierro/fierro9.webp';
-import fierro10 from '../../../img/projects/fierro/fierro10.webp';
+import fierro1 from '../../../../img/projects/fierro/fierro1.webp';
+import fierro2 from '../../../../img/projects/fierro/fierro2.webp';
+import fierro3 from '../../../../img/projects/fierro/fierro3.webp';
+import fierro4 from '../../../../img/projects/fierro/fierro4.webp';
+import fierro5 from '../../../../img/projects/fierro/fierro5.webp';
+import fierro6 from '../../../../img/projects/fierro/fierro6.webp';
+import fierro7 from '../../../../img/projects/fierro/fierro7.webp';
+import fierro8 from '../../../../img/projects/fierro/fierro8.webp';
+import fierro9 from '../../../../img/projects/fierro/fierro9.webp';
+import fierro10 from '../../../../img/projects/fierro/fierro10.webp';
 
 const datosTecnicos = [
     { label: 'Tipología', value: 'Teatro' },
