--- a/src/pages/en/projects/theaters/teatro-pane.astro
+++ b/src/pages/en/projects/theaters/teatro-pane.astro
@@ -1,29 +1,29 @@
 ---
-import pane from '../../../img/projects/pane.webp';
+import pane from '../../../../img/projects/pane.webp';
 import ProjectPage from '../../../../components/ProjectPage.astro';
 import Base from '../../../../layouts/Base.astro';
 import Layout from '../../../../layouts/Layout.astro';
 
-import pane1 from '../../../img/projects/pane/pane1.webp';
-import pane2 from '../../../img/projects/pane/pane2.webp';
-import pane3 from '../../../img/projects/pane/pane3.webp';
-import pane4 from '../../../img/projects/pane/pane4.webp';
-import pane5 from '../../../img/projects/pane/pane5.webp';
-import pane6 from '../../../img/projects/pane/pane6.webp';
-import pane7 from '../../../img/projects/pane/pane7.webp';
-import pane8 from '../../../img/projects/pane/pane8.webp';
-import pane9 from '../../../img/projects/pane/pane9.webp';
-import pane10 from '../../../img/projects/pane/pane10.webp';
-import pane11 from '../../../img/projects/pane/pane11.webp';
-import pane12 from '../../../img/projects/pane/pane12.webp';
-import pane13 from '../../../img/projects/pane/pane13.webp';
-import pane14 from '../../../img/projects/pane/pane14.webp';
-import pane15 from '../../../img/projects/pane/pane15.webp';
-import pane16 from '../../../img/projects/pane/pane16.webp';
-import pane17 from '../../../img/projects/pane/pane17.webp';
-import pane18 from '../../../img/projects/pane/pane18.webp';
-import pane19 from '../../../img/projects/pane/pane19.webp';
-import pane20 from '../../../img/projects/pane/pane20.webp';
+import pane1 from '../../../../img/projects/pane/pane1.webp';
+import pane2 from '../../../../img/projects/pane/pane2.webp';
+import pane3 from '../../../../img/projects/pane/pane3.webp';
+import pane4 from '../../../../img/projects/pane/pane4.webp';
+import pane5 from '../../../../img/projects/pane/pane5.webp';
+import pane6 from '../../../../img/projects/pane/pane6.webp';
+import pane7 from '../../../../img/projects/pane/pane7.webp';
+import pane8 from '../../../../img/projects/pane/pane8.webp';
+import pane9 from '../../../../img/projects/pane/pane9.webp';
+import pane10 from '../../../../img/projects/pane/pane10.webp';
+import pane11 from '../../../../img/projects/pane/pane11.webp';
+import pane12 from '../../../../img/projects/pane/pane12.webp';
+import pane13 from '../../../../img/projects/pane/pane13.webp';
+import pane14 from '../../../../img/projects/pane/pane14.webp';
+import pane15 from '../../../../img/projects/pane/pane15.webp';
+import pane16 from '../../../../img/projects/pane/pane16.webp';
+import pane17 from '../../../../img/projects/pane/pane17.webp';
+import pane18 from '../../../../img/projects/pane/pane18.webp';
+import pane19 from '../../../../img/projects/pane/pane19.webp';
+import pane20 from '../../../../img/projects/pane/pane20.webp';
 
 const datosTecnicos = [
     { label: 'Tipología', value: 'Teatro' },
