--- a/src/pages/en/projects/theaters/teatro-santiago.astro
+++ b/src/pages/en/projects/theaters/teatro-santiago.astro
@@ -1,22 +1,22 @@
 ---
-import santiago from '../../../img/projects/santiago.webp';
+import santiago from '../../../../img/projects/santiago.webp';
 import ProjectPage from '../../../../components/ProjectPage.astro';
 import Base from '../../../../layouts/Base.astro';
 import Layout from '../../../../layouts/Layout.astro';
 
-import santiago1 from '../../../img/projects/santiago/santiago1.webp';
-import santiago2 from '../../../img/projects/santiago/santiago2.webp';
-import santiago3 from '../../../img/projects/santiago/santiago3.webp';
-import santiago4 from '../../../img/projects/santiago/santiago4.webp';
-import santiago5 from '../../../img/projects/santiago/santiago5.webp';
-import santiago6 from '../../../img/projects/santiago/santiago6.webp';
-import santiago7 from '../../../img/projects/santiago/santiago7.webp';
-import santiago8 from '../../../img/projects/santiago/santiago8.webp';
-import santiago9 from '../../../img/projects/santiago/santiago9.webp';
-import santiago10 from '../../../img/projects/santiago/santiago10.webp';
-import santiago11 from '../../../img/projects/santiago/santiago11.webp';
-import santiago12 from '../../../img/projects/santiago/santiago12.webp';
-import santiago13 from '../../../img/projects/santiago/santiago13.webp';
+import santiago1 from '../../../../img/projects/santiago/santiago1.webp';
+import santiago2 from '../../../../img/projects/santiago/santiago2.webp';
+import santiago3 from '../../../../img/projects/santiago/santiago3.webp';
+import santiago4 from '../../../../img/projects/santiago/santiago4.webp';
+import santiago5 from '../../../../img/projects/santiago/santiago5.webp';
+import santiago6 from '../../../../img/projects/santiago/santiago6.webp';
+import santiago7 from '../../../../img/projects/santiago/santiago7.webp';
+import santiago8 from '../../../../img/projects/santiago/santiago8.webp';
+import santiago9 from '../../../../img/projects/santiago/santiago9.webp';
+import santiago10 from '../../../../img/projects/santiago/santiago10.webp';
+import santiago11 from '../../../../img/projects/santiago/santiago11.webp';
+import santiago12 from '../../../../img/projects/santiago/santiago12.webp';
+import santiago13 from '../../../../img/projects/santiago/santiago13.webp';
 
 const datosTecnicos = [
     { label: 'Tipología', value: 'Teatro' },
