--- a/src/pages/en/projects/theaters/teatro-solis.astro
+++ b/src/pages/en/projects/theaters/teatro-solis.astro
@@ -1,21 +1,21 @@
 ---
-import solis from '../../../img/projects/solis.webp';
+import solis from '../../../../img/projects/solis.webp';
 import ProjectPage from '../../../../components/ProjectPage.astro';
 import Base from '../../../../layouts/Base.astro';
 import Layout from '../../../../layouts/Layout.astro';
 
-import solis1 from '../../../img/projects/solis/solis1.webp';
-import solis2 from '../../../img/projects/solis/solis2.webp';
-import solis3 from '../../../img/projects/solis/solis3.webp';
-import solis4 from '../../../img/projects/solis/solis4.webp';
-import solis5 from '../../../img/projects/solis/solis5.webp';
-import solis6 from '../../../img/projects/solis/solis6.webp';
-import solis7 from '../../../img/projects/solis/solis7.webp';
-import solis8 from '../../../img/projects/solis/solis8.webp';
-import solis9 from '../../../img/projects/solis/solis9.webp';
-import solis10 from '../../../img/projects/solis/solis10.webp';
-import solis11 from '../../../img/projects/solis/solis11.webp';
-import solis12 from '../../../img/projects/solis/solis12.webp';
+import solis1 from '../../../../img/projects/solis/solis1.webp';
+import solis2 from '../../../../img/projects/solis/solis2.webp';
+import solis3 from '../../../../img/projects/solis/solis3.webp';
+import solis4 from '../../../../img/projects/solis/solis4.webp';
+import solis5 from '../../../../img/projects/solis/solis5.webp';
+import solis6 from '../../../../img/projects/solis/solis6.webp';
+import solis7 from '../../../../img/projects/solis/solis7.webp';
+import solis8 from '../../../../img/projects/solis/solis8.webp';
+import solis9 from '../../../../img/projects/solis/solis9.webp';
+import solis10 from '../../../../img/projects/solis/solis10.webp';
+import solis11 from '../../../../img/projects/solis/solis11.webp';
+import solis12 from '../../../../img/projects/solis/solis12.webp';
 
 const datosTecnicos = [
     { label: 'Tipología', value: 'Teatro' },
