--- a/src/pages/en/publications.astro
+++ b/src/pages/en/publications.astro
@@ -19,6 +19,8 @@ import Layout from '../../layouts/Layout.astro';
             />
             <PublicationsComponentEng />
         </div>
-        <Footer />
+        <Footer
+            description="Sambataro Arquitectos, an architecture firm with over 40 years of experience in scenotechnical consulting and stage machinery for preventive and corrective maintenance."
+        />
     </Base>
 </Layout>
