--- a/src/pages/en/service.astro
+++ b/src/pages/en/service.astro
@@ -209,5 +209,7 @@ const contenidos = contenido.find((item) => item.tema === 'Stage Technology Cons
             </div>
         </div>
     </section>
-    <Footer />
+    <Footer
+        description="Sambataro Arquitectos, an architecture firm with over 40 years of experience in scenotechnical consulting and stage machinery for preventive and corrective maintenance."
+    />
 </Layout>
