--- a/src/pages/publications.astro
+++ b/src/pages/publications.astro
@@ -19,6 +19,8 @@ import Layout from '../layouts/Layout.astro';
             />
             <PublicationsComponent />
         </div>
-        <Footer />
+        <Footer
+            description="Sambataro Arquitectos, estudio de arquitectura con más de 40 años de experiencia en asesoría esceno-técnica y maquinaria escénica de mantenimiento'preventivo y correctivo."
+        />
     </Base>
 </Layout>
