--- a/src/pages/service.astro
+++ b/src/pages/service.astro
@@ -115,9 +115,9 @@ const contenidos = contenido.find((item) => item.tema === 'Asesoría Escenotécn
                 />
                 <div class="flex flex-col gap-10">
                     <!-- Mission description -->
-                    <div class="space-y-8  sm:space-y-12">
+                    <div class="space-y-8 sm:space-y-12">
                         <div
-                            class="space-y-6 rounded-xl border border-primary-900/10 bg-primary-200/50 px-6 py-8 shadow-md dark:border-primary-300/10 dark:bg-primary-900 lg:p-12 ">
+                            class="space-y-6 rounded-xl border border-primary-900/10 bg-primary-200/50 px-6 py-8 shadow-md dark:border-primary-300/10 dark:bg-primary-900 lg:p-12">
                             <p
                                 class="text-base text-primary-950/70 dark:text-primary-200/70 sm:text-lg">
                                 Prestamos servicios integrales de asesoría escenotécnica respecto a
@@ -207,5 +207,7 @@ const contenidos = contenido.find((item) => item.tema === 'Asesoría Escenotécn
             </div>
         </div>
     </section>
-    <Footer />
+    <Footer
+        description="Sambataro Arquitectos, estudio de arquitectura con más de 40 años de experiencia en asesoría esceno-técnica y maquinaria escénica de mantenimiento'preventivo y correctivo."
+    />
 </Layout>
