--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -21,5 +21,7 @@ import Heading from '../components/about/Heading.astro';
     />
     <Values />
     <Team />
-    <Footer />
+    <Footer
+        description="Sambataro Arquitectos, estudio de arquitectura con más de 40 años de experiencia en asesoría esceno-técnica y maquinaria escénica de mantenimiento'preventivo y correctivo."
+    />
 </Layout>
