--- a/src/pages/en/projects/buildings/superior-de-arte.astro
+++ b/src/pages/en/projects/buildings/superior-de-arte.astro
@@ -1,14 +1,14 @@
 ---
-import superior from '../../../img/projects/superior.webp';
+import superior from '../../../../img/projects/superior.webp';
 import ProjectPage from '../../../../components/ProjectPage.astro';
 import Base from '../../../../layouts/Base.astro';
 import Layout from '../../../../layouts/Layout.astro';
 
-import superior1 from '../../../img/projects/superior/superior1.webp';
-import superior2 from '../../../img/projects/superior/superior2.webp';
-import superior3 from '../../../img/projects/superior/superior3.webp';
-import superior4 from '../../../img/projects/superior/superior4.webp';
-import superior5 from '../../../img/projects/superior/superior5.webp';
+import superior1 from '../../../../img/projects/superior/superior1.webp';
+import superior2 from '../../../../img/projects/superior/superior2.webp';
+import superior3 from '../../../../img/projects/superior/superior3.webp';
+import superior4 from '../../../../img/projects/superior/superior4.webp';
+import superior5 from '../../../../img/projects/superior/superior5.webp';
 
 const datosTecnicos = [
     { label: 'Tipología', value: 'Edificio complementario' },
