--- a/src/pages/en/projects/sands/arena-santiago.astro
+++ b/src/pages/en/projects/sands/arena-santiago.astro
@@ -1,23 +1,23 @@
 ---
-import arena from '../../../img/projects/arena.webp';
+import arena from '../../../../img/projects/arena.webp';
 import ProjectPage from '../../../../components/ProjectPage.astro';
 import Base from '../../../../layouts/Base.astro';
 import Layout from '../../../../layouts/Layout.astro';
 
-import arena1 from '../../../img/projects/arena/arena1.webp';
-import arena2 from '../../../img/projects/arena/arena2.webp';
-import arena3 from '../../../img/projects/arena/arena3.webp';
-import arena4 from '../../../img/projects/arena/arena4.webp';
-import arena5 from '../../../img/projects/arena/arena5.webp';
-import arena6 from '../../../img/projects/arena/arena6.webp';
-import arena7 from '../../../img/projects/arena/arena7.webp';
-import arena8 from '../../../img/projects/arena/arena8.webp';
-import arena9 from '../../../img/projects/arena/arena9.webp';
-import arena10 from '../../../img/projects/arena/arena10.webp';
-import arena11 from '../../../img/projects/arena/arena11.webp';
-import arena12 from '../../../img/projects/arena/arena12.webp';
-import arena13 from '../../../img/projects/arena/arena13.webp';
-import arena14 from '../../../img/projects/arena/arena14.webp';
+import arena1 from '../../../../img/projects/arena/arena1.webp';
+import arena2 from '../../../../img/projects/arena/arena2.webp';
+import arena3 from '../../../../img/projects/arena/arena3.webp';
+import arena4 from '../../../../img/projects/arena/arena4.webp';
+import arena5 from '../../../../img/projects/arena/arena5.webp';
+import arena6 from '../../../../img/projects/arena/arena6.webp';
+import arena7 from '../../../../img/projects/arena/arena7.webp';
+import arena8 from '../../../../img/projects/arena/arena8.webp';
+import arena9 from '../../../../img/projects/arena/arena9.webp';
+import arena10 from '../../../../img/projects/arena/arena10.webp';
+import arena11 from '../../../../img/projects/arena/arena11.webp';
+import arena12 from '../../../../img/projects/arena/arena12.webp';
+import arena13 from '../../../../img/projects/arena/arena13.webp';
+import arena14 from '../../../../img/projects/arena/arena14.webp';
 
 const datosTecnicos = [
     { label: 'Tipología', value: 'Estadio' },
