--- a/src/pages/en/projects/theaters/ciudad-de-las-artes.astro
+++ b/src/pages/en/projects/theaters/ciudad-de-las-artes.astro
@@ -1,14 +1,14 @@
 ---
-import ciudad from '../../../img/projects/ciudad.webp';
+import ciudad from '../../../../img/projects/ciudad.webp';
 import ProjectPage from '../../../../components/ProjectPage.astro';
 import Base from '../../../../layouts/Base.astro';
 import Layout from '../../../../layouts/Layout.astro';
 
-import ciudad1 from '../../../img/projects/ciudad/ciudad1.webp';
-import ciudad2 from '../../../img/projects/ciudad/ciudad2.webp';
-import ciudad3 from '../../../img/projects/ciudad/ciudad3.webp';
-import ciudad4 from '../../../img/projects/ciudad/ciudad4.webp';
-import ciudad5 from '../../../img/projects/ciudad/ciudad5.webp';
+import ciudad1 from '../../../../img/projects/ciudad/ciudad1.webp';
+import ciudad2 from '../../../../img/projects/ciudad/ciudad2.webp';
+import ciudad3 from '../../../../img/projects/ciudad/ciudad3.webp';
+import ciudad4 from '../../../../img/projects/ciudad/ciudad4.webp';
+import ciudad5 from '../../../../img/projects/ciudad/ciudad5.webp';
 
 const datosTecnicos = [
     { label: 'Tipología', value: 'Centro cultural' },
