--- a/src/pages/en/projects/theaters/teatro-bellas-artes.astro
+++ b/src/pages/en/projects/theaters/teatro-bellas-artes.astro
@@ -1,26 +1,26 @@
 ---
-import artes from '../../../img/projects/artes.webp';
+import artes from '../../../../img/projects/artes.webp';
 import ProjectPage from '../../../../components/ProjectPage.astro';
 import Base from '../../../../layouts/Base.astro';
 import Layout from '../../../../layouts/Layout.astro';
 
-import artes1 from '../../../img/projects/artes/artes1.webp';
-import artes2 from '../../../img/projects/artes/artes2.webp';
-import artes3 from '../../../img/projects/artes/artes3.webp';
-import artes4 from '../../../img/projects/artes/artes4.webp';
-import artes5 from '../../../img/projects/artes/artes5.webp';
-import artes6 from '../../../img/projects/artes/artes6.webp';
-import artes7 from '../../../img/projects/artes/artes7.webp';
-import artes8 from '../../../img/projects/artes/artes8.webp';
-import artes9 from '../../../img/projects/artes/artes9.webp';
-import artes10 from '../../../img/projects/artes/artes10.webp';
-import artes11 from '../../../img/projects/artes/artes11.webp';
-import artes12 from '../../../img/projects/artes/artes12.webp';
-import artes13 from '../../../img/projects/artes/artes13.webp';
-import artes14 from '../../../img/projects/artes/artes14.webp';
-import artes15 from '../../../img/projects/artes/artes15.webp';
-import artes16 from '../../../img/projects/artes/artes16.webp';
-import artes17 from '../../../img/projects/artes/artes17.webp';
+import artes1 from '../../../../img/projects/artes/artes1.webp';
+import artes2 from '../../../../img/projects/artes/artes2.webp';
+import artes3 from '../../../../img/projects/artes/artes3.webp';
+import artes4 from '../../../../img/projects/artes/artes4.webp';
+import artes5 from '../../../../img/projects/artes/artes5.webp';
+import artes6 from '../../../../img/projects/artes/artes6.webp';
+import artes7 from '../../../../img/projects/artes/artes7.webp';
+import artes8 from '../../../../img/projects/artes/artes8.webp';
+import artes9 from '../../../../img/projects/artes/artes9.webp';
+import artes10 from '../../../../img/projects/artes/artes10.webp';
+import artes11 from '../../../../img/projects/artes/artes11.webp';
+import artes12 from '../../../../img/projects/artes/artes12.webp';
+import artes13 from '../../../../img/projects/artes/artes13.webp';
+import artes14 from '../../../../img/projects/artes/artes14.webp';
+import artes15 from '../../../../img/projects/artes/artes15.webp';
+import artes16 from '../../../../img/projects/artes/artes16.webp';
+import artes17 from '../../../../img/projects/artes/artes17.webp';
 
 const datosTecnicos = [
     { label: 'Tipología', value: 'Teatro' },
