--- a/src/pages/en/projects/theaters/teatro-tronador.astro
+++ b/src/pages/en/projects/theaters/teatro-tronador.astro
@@ -1,30 +1,30 @@
 ---
-import tronador from '../../../img/projects/tronador.webp';
+import tronador from '../../../../img/projects/tronador.webp';
 import ProjectPage from '../../../../components/ProjectPage.astro';
 import Base from '../../../../layouts/Base.astro';
 import Layout from '../../../../layouts/Layout.astro';
 
-import tronador1 from '../../../img/projects/tronador/tronador1.webp';
-import tronador2 from '../../../img/projects/tronador/tronador2.webp';
-import tronador3 from '../../../img/projects/tronador/tronador3.webp';
-import tronador4 from '../../../img/projects/tronador/tronador4.webp';
-import tronador5 from '../../../img/projects/tronador/tronador5.webp';
-import tronador6 from '../../../img/projects/tronador/tronador6.webp';
-import tronador7 from '../../../img/projects/tronador/tronador7.webp';
-import tronador8 from '../../../img/projects/tronador/tronador8.webp';
-import tronador9 from '../../../img/projects/tronador/tronador9.webp';
-import tronador10 from '../../../img/projects/tronador/tronador10.webp';
-import tronador11 from '../../../img/projects/tronador/tronador11.webp';
-import tronador12 from '../../../img/projects/tronador/tronador12.webp';
-import tronador13 from '../../../img/projects/tronador/tronador13.webp';
-import tronador14 from '../../../img/projects/tronador/tronador14.webp';
-import tronador15 from '../../../img/projects/tronador/tronador15.webp';
-import tronador16 from '../../../img/projects/tronador/tronador16.webp';
-import tronador17 from '../../../img/projects/tronador/tronador17.webp';
-import tronador18 from '../../../img/projects/tronador/tronador18.webp';
-import tronador19 from '../../../img/projects/tronador/tronador19.webp';
-import tronador20 from '../../../img/projects/tronador/tronador20.webp';
-import tronador21 from '../../../img/projects/tronador/tronador21.webp';
+import tronador1 from '../../../../img/projects/tronador/tronador1.webp';
+import tronador2 from '../../../../img/projects/tronador/tronador2.webp';
+import tronador3 from '../../../../img/projects/tronador/tronador3.webp';
+import tronador4 from '../../../../img/projects/tronador/tronador4.webp';
+import tronador5 from '../../../../img/projects/tronador/tronador5.webp';
+import tronador6 from '../../../../img/projects/tronador/tronador6.webp';
+import tronador7 from '../../../../img/projects/tronador/tronador7.webp';
+import tronador8 from '../../../../img/projects/tronador/tronador8.webp';
+import tronador9 from '../../../../img/projects/tronador/tronador9.webp';
+import tronador10 from '../../../../img/projects/tronador/tronador10.webp';
+import tronador11 from '../../../../img/projects/tronador/tronador11.webp';
+import tronador12 from '../../../../img/projects/tronador/tronador12.webp';
+import tronador13 from '../../../../img/projects/tronador/tronador13.webp';
+import tronador14 from '../../../../img/projects/tronador/tronador14.webp';
+import tronador15 from '../../../../img/projects/tronador/tronador15.webp';
+import tronador16 from '../../../../img/projects/tronador/tronador16.webp';
+import tronador17 from '../../../../img/projects/tronador/tronador17.webp';
+import tronador18 from '../../../../img/projects/tronador/tronador18.webp';
+import tronador19 from '../../../../img/projects/tronador/tronador19.webp';
+import tronador20 from '../../../../img/projects/tronador/tronador20.webp';
+import tronador21 from '../../../../img/projects/tronador/tronador21.webp';
 
 const datosTecnicos = [
     { label: 'Tipología', value: 'Teatro' },
