--- a/src/pages/projects/all.astro
+++ b/src/pages/projects/all.astro
@@ -627,11 +627,11 @@ const air = [
 <Layout description="" title="Proyectos">
     <Base>
         <Header />
-        <section class="py-12 w-screen overflow-hidden">
+        <section class="w-screen overflow-hidden py-12">
             <h1>
                 <Heading title="Proyectos" subtitle="" />
             </h1>
-            <article class=" mx-auto py-12 sm:py-24">
+            <article class="mx-auto py-12 sm:py-24">
                 <h6
                     class="mx-auto w-full py-4 text-center text-2xl font-light tracking-tight sm:py-12 lg:text-[3vw]">
                     {titles[0].title}
@@ -645,7 +645,7 @@ const air = [
                 />
             </article>
 
-            <article class=" mx-auto py-12 sm:py-24">
+            <article class="mx-auto py-12 sm:py-24">
                 <h6
                     class="mx-auto w-full py-4 text-center text-2xl font-light tracking-tight sm:py-12 lg:text-[3vw]">
                     {titles[1].title}
@@ -659,7 +659,7 @@ const air = [
                 />
             </article>
 
-            <article class=" mx-auto py-12 sm:py-24">
+            <article class="mx-auto py-12 sm:py-24">
                 <h6
                     class="mx-auto w-full py-4 text-center text-2xl font-light tracking-tight sm:py-12 lg:text-[3vw]">
                     {titles[2].title}
@@ -668,7 +668,7 @@ const air = [
                 <EmblaCarousel client:visible slides={SLIDES} options={OPTIONS} projects={sands} />
             </article>
 
-            <article class=" mx-auto py-12 sm:py-24">
+            <article class="mx-auto py-12 sm:py-24">
                 <h6
                     class="mx-auto w-full py-4 text-center text-2xl font-light tracking-tight sm:py-12 lg:text-[3vw]">
                     {titles[3].title}
@@ -682,7 +682,7 @@ const air = [
                 />
             </article>
 
-            <article class=" mx-auto py-12 sm:py-24">
+            <article class="mx-auto py-12 sm:py-24">
                 <h6
                     class="mx-auto w-full py-4 text-center text-2xl font-light tracking-tight sm:py-12 lg:text-[3vw]">
                     {titles[4].title}
@@ -696,7 +696,7 @@ const air = [
                 />
             </article>
 
-            <article class=" mx-auto py-12 sm:py-24">
+            <article class="mx-auto py-12 sm:py-24">
                 <h6
                     class="mx-auto w-full py-4 text-center text-2xl font-light tracking-tight sm:py-12 lg:text-[3vw]">
                     {titles[5].title}
@@ -705,6 +705,8 @@ const air = [
                 <EmblaCarousel client:visible slides={SLIDES} options={OPTIONS} projects={air} />
             </article>
         </section>
-        <Footer />
+        <Footer
+            description="Sambataro Arquitectos, estudio de arquitectura con más de 40 años de experiencia en asesoría esceno-técnica y maquinaria escénica de mantenimiento'preventivo y correctivo."
+        />
     </Base>
 </Layout>
