--- a/src/pages/en/projects/theaters/teatro-condes.astro
+++ b/src/pages/en/projects/theaters/teatro-condes.astro
@@ -1,5 +1,5 @@
 ---
-import condes from '../../../../../img/projects/condes.webp';
+import condes from '../../../../img/projects/condes.webp';
 import ProjectPage from '../../../../components/ProjectPage.astro';
 import Base from '../../../../layouts/Base.astro';
 import Layout from '../../../../layouts/Layout.astro';
